--- a/clean_paper/predictions/autumn-dawn-564_exp5_one_src_token/NIST/1727883404_valid_full_greedy/log_file.yaml
+++ b/clean_paper/predictions/autumn-dawn-564_exp5_one_src_token/NIST/1727883404_valid_full_greedy/log_file.yaml
@@ -43,10 +43,10 @@ evaluation_0:
         mean_db_score: '0.3873157933415626'
         mean_fpsd_score_probsort: '0.23243253911771278'
         mean_fpsd_score_similsort: '0.23243253911771278'
-        percentage_of_BART_wins_probsort: '0.6974127834758845'
-        percentage_of_BART_wins_similsort: '0.6974127834758845'
-        percentage_of_ties_probsort: '0.14284700287468502'
-        percentage_of_ties_similsort: '0.14284700287468502'
+        rate_of_BART_wins_probsort: '0.6974127834758845'
+        rate_of_BART_wins_similsort: '0.6974127834758845'
+        rate_of_ties_probsort: '0.14284700287468502'
+        rate_of_ties_similsort: '0.14284700287468502'
         ties:
             mean_tie_simils_probsort: '0.728195278603496'
             mean_tie_simils_similsort: '0.728195278603496'
@@ -54,8 +54,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '1698'
             num_of_ties_simils_equal_to_1_similsort: '1698'
             num_of_ties_similsort: '4025'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.4218633540372671'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.4218633540372671'
+            rate_of_ties_simils_equal_to_1_probsort: '0.4218633540372671'
+            rate_of_ties_simils_equal_to_1_similsort: '0.4218633540372671'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -74,10 +74,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '17639'
         num_correct_formulas_at_best_prob: '17639'
         num_correct_formulas_at_best_simil: '17639'
-        percentage_of_all_correct_formulas: '0.6358458599185322'
-        percentage_of_at_least_one_correct_formula: '0.6260070270078433'
-        percentage_of_correct_formulas_at_best_prob: '0.6260070270078433'
-        percentage_of_correct_formulas_at_best_simil: '0.6260070270078433'
+        rate_of_all_correct_formulas: '0.6358458599185322'
+        rate_of_at_least_one_correct_formula: '0.6260070270078433'
+        rate_of_correct_formulas_at_best_prob: '0.6260070270078433'
+        rate_of_correct_formulas_at_best_simil: '0.6260070270078433'
     hit_at_k_prob: '[(1, 0.38116194058984276)]'
     labels_path: data/nist/valid_with_db_index.jsonl
     num_datapoints_tested: '28177'
@@ -86,22 +86,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '10282'
         num_precise_preds_similsort: '10282'
-        percentage_of_precise_preds_probsort: '0.36490754870994074'
-        percentage_of_precise_preds_similsort: '0.36490754870994074'
+        rate_of_precise_preds_probsort: '0.36490754870994074'
+        rate_of_precise_preds_similsort: '0.36490754870994074'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 10740)])
         num_1_hits_as_first_probsort: '10740'
         num_1_hits_as_first_similsort: '10740'
         num_fp_simil_fail_prob: '458'
         num_fp_simil_fail_simil: '458'
-        percentage_of_1_hits_as_first_probsort: '0.38116194058984276'
-        percentage_of_1_hits_as_first_similsort: '0.38116194058984276'
+        rate_of_1_hits_as_first_probsort: '0.38116194058984276'
+        rate_of_1_hits_as_first_similsort: '0.38116194058984276'
     start_time_utc: 04/10/2024 09:24:53
     threshold_stats:
         num_better_than_threshold_probsort: '11031'
         num_better_than_threshold_similsort: '11031'
-        percentage_of_better_than_threshold_probsort: '0.391489512723143'
-        percentage_of_better_than_threshold_similsort: '0.391489512723143'
+        rate_of_better_than_threshold_probsort: '0.391489512723143'
+        rate_of_better_than_threshold_similsort: '0.391489512723143'
         threshold: '0.85'
     topk_probsort: '[0.6197483324592754]'
     topk_similsort: '[0.6197483324592754]'
@@ -111,10 +111,10 @@ evaluation_1:
         mean_db_score: '0.3873157933415626'
         mean_fpsd_score_probsort: '0.23243253911771278'
         mean_fpsd_score_similsort: '0.23243253911771278'
-        percentage_of_BART_wins_probsort: '0.6974127834758845'
-        percentage_of_BART_wins_similsort: '0.6974127834758845'
-        percentage_of_ties_probsort: '0.14284700287468502'
-        percentage_of_ties_similsort: '0.14284700287468502'
+        rate_of_BART_wins_probsort: '0.6974127834758845'
+        rate_of_BART_wins_similsort: '0.6974127834758845'
+        rate_of_ties_probsort: '0.14284700287468502'
+        rate_of_ties_similsort: '0.14284700287468502'
         ties:
             mean_tie_simils_probsort: '0.728195278603496'
             mean_tie_simils_similsort: '0.728195278603496'
@@ -122,8 +122,8 @@ evaluation_1:
             num_of_ties_simils_equal_to_1_probsort: '1698'
             num_of_ties_simils_equal_to_1_similsort: '1698'
             num_of_ties_similsort: '4025'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.4218633540372671'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.4218633540372671'
+            rate_of_ties_simils_equal_to_1_probsort: '0.4218633540372671'
+            rate_of_ties_simils_equal_to_1_similsort: '0.4218633540372671'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -142,10 +142,10 @@ evaluation_1:
         num_at_least_one_correct_formula: '17639'
         num_correct_formulas_at_best_prob: '17639'
         num_correct_formulas_at_best_simil: '17639'
-        percentage_of_all_correct_formulas: '0.6358458599185322'
-        percentage_of_at_least_one_correct_formula: '0.6260070270078433'
-        percentage_of_correct_formulas_at_best_prob: '0.6260070270078433'
-        percentage_of_correct_formulas_at_best_simil: '0.6260070270078433'
+        rate_of_all_correct_formulas: '0.6358458599185322'
+        rate_of_at_least_one_correct_formula: '0.6260070270078433'
+        rate_of_correct_formulas_at_best_prob: '0.6260070270078433'
+        rate_of_correct_formulas_at_best_simil: '0.6260070270078433'
     hit_at_k_prob: '[(1, 0.38116194058984276)]'
     labels_path: data/nist/valid_with_db_index.jsonl
     num_datapoints_tested: '28177'
@@ -154,22 +154,22 @@ evaluation_1:
     precise_preds_stats:
         num_precise_preds_probsort: '10282'
         num_precise_preds_similsort: '10282'
-        percentage_of_precise_preds_probsort: '0.36490754870994074'
-        percentage_of_precise_preds_similsort: '0.36490754870994074'
+        rate_of_precise_preds_probsort: '0.36490754870994074'
+        rate_of_precise_preds_similsort: '0.36490754870994074'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 10740)])
         num_1_hits_as_first_probsort: '10740'
         num_1_hits_as_first_similsort: '10740'
         num_fp_simil_fail_prob: '458'
         num_fp_simil_fail_simil: '458'
-        percentage_of_1_hits_as_first_probsort: '0.38116194058984276'
-        percentage_of_1_hits_as_first_similsort: '0.38116194058984276'
+        rate_of_1_hits_as_first_probsort: '0.38116194058984276'
+        rate_of_1_hits_as_first_similsort: '0.38116194058984276'
     start_time_utc: 04/10/2024 09:27:19
     threshold_stats:
         num_better_than_threshold_probsort: '11031'
         num_better_than_threshold_similsort: '11031'
-        percentage_of_better_than_threshold_probsort: '0.391489512723143'
-        percentage_of_better_than_threshold_similsort: '0.391489512723143'
+        rate_of_better_than_threshold_probsort: '0.391489512723143'
+        rate_of_better_than_threshold_similsort: '0.391489512723143'
         threshold: '0.85'
     topk_probsort: '[0.6197483324592754]'
     topk_similsort: '[0.6197483324592754]'
