--- a/clean_paper/predictions/autumn-dawn-564_exp5_one_src_token/MACE/1727882452_all_full_beam10/log_file.yaml
+++ b/clean_paper/predictions/autumn-dawn-564_exp5_one_src_token/MACE/1727882452_all_full_beam10/log_file.yaml
@@ -44,10 +44,10 @@ evaluation_0:
         mean_db_score: '0.22742889217712875'
         mean_fpsd_score_probsort: '0.04407514419570297'
         mean_fpsd_score_similsort: '0.13356909179042165'
-        percentage_of_BART_wins_probsort: '0.6147540983606558'
-        percentage_of_BART_wins_similsort: '0.8319672131147541'
-        percentage_of_ties_probsort: '0.0778688524590164'
-        percentage_of_ties_similsort: '0.0778688524590164'
+        rate_of_BART_wins_probsort: '0.6147540983606558'
+        rate_of_BART_wins_similsort: '0.8319672131147541'
+        rate_of_ties_probsort: '0.0778688524590164'
+        rate_of_ties_similsort: '0.0778688524590164'
         ties:
             mean_tie_simils_probsort: '0.5020497199474484'
             mean_tie_simils_similsort: '0.6149493378168515'
@@ -55,8 +55,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '4'
             num_of_ties_simils_equal_to_1_similsort: '6'
             num_of_ties_similsort: '19'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.21052631578947367'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.3157894736842105'
+            rate_of_ties_simils_equal_to_1_probsort: '0.21052631578947367'
+            rate_of_ties_simils_equal_to_1_similsort: '0.3157894736842105'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -75,10 +75,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '36'
         num_correct_formulas_at_best_prob: '28'
         num_correct_formulas_at_best_simil: '29'
-        percentage_of_all_correct_formulas: '0.08280523869877482'
-        percentage_of_at_least_one_correct_formula: '0.14754098360655737'
-        percentage_of_correct_formulas_at_best_prob: '0.11475409836065574'
-        percentage_of_correct_formulas_at_best_simil: '0.11885245901639344'
+        rate_of_all_correct_formulas: '0.08280523869877482'
+        rate_of_at_least_one_correct_formula: '0.14754098360655737'
+        rate_of_correct_formulas_at_best_prob: '0.11475409836065574'
+        rate_of_correct_formulas_at_best_simil: '0.11885245901639344'
     hit_at_k_prob: '[(1, 0.028688524590163935), (2, 0.040983606557377046), (3, 0.045081967213114756),
         (4, 0.05737704918032787), (5, 0.06147540983606557), (7, 0.06557377049180328),
         (9, 0.07377049180327869)]'
@@ -89,22 +89,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '3'
         num_precise_preds_similsort: '15'
-        percentage_of_precise_preds_probsort: '0.012295081967213115'
-        percentage_of_precise_preds_similsort: '0.06147540983606557'
+        rate_of_precise_preds_probsort: '0.012295081967213115'
+        rate_of_precise_preds_similsort: '0.06147540983606557'
     simil_1_hits:
         counter_multiple_hits: dict_items([(3, 3), (1, 11), (2, 4)])
         num_1_hits_as_first_probsort: '7'
         num_1_hits_as_first_similsort: '18'
         num_fp_simil_fail_prob: '4'
         num_fp_simil_fail_simil: '3'
-        percentage_of_1_hits_as_first_probsort: '0.028688524590163935'
-        percentage_of_1_hits_as_first_similsort: '0.07377049180327869'
+        rate_of_1_hits_as_first_probsort: '0.028688524590163935'
+        rate_of_1_hits_as_first_similsort: '0.07377049180327869'
     start_time_utc: 02/10/2024 18:30:37
     threshold_stats:
         num_better_than_threshold_probsort: '8'
         num_better_than_threshold_similsort: '19'
-        percentage_of_better_than_threshold_probsort: '0.03278688524590164'
-        percentage_of_better_than_threshold_similsort: '0.0778688524590164'
+        rate_of_better_than_threshold_probsort: '0.03278688524590164'
+        rate_of_better_than_threshold_similsort: '0.0778688524590164'
         threshold: '0.85'
     topk_probsort: '[0.2715040363728317, 0.26637455733912874, 0.25568759877506975,
         0.26244546716345374, 0.2457748660628578, 0.231139871530955, 0.22968102582683012,
