--- a/clean_paper/predictions/crisp-meadow-535_exp2_lin_100/NIST/1728026099_valid_full_greedy/log_file.yaml
+++ b/clean_paper/predictions/crisp-meadow-535_exp2_lin_100/NIST/1728026099_valid_full_greedy/log_file.yaml
@@ -43,10 +43,10 @@ evaluation_0:
         mean_db_score: '0.3873157933415626'
         mean_fpsd_score_probsort: '0.14741729351776392'
         mean_fpsd_score_similsort: '0.14741729351776392'
-        percentage_of_BART_wins_probsort: '0.622741952656422'
-        percentage_of_BART_wins_similsort: '0.622741952656422'
-        percentage_of_ties_probsort: '0.14650246655073287'
-        percentage_of_ties_similsort: '0.14650246655073287'
+        rate_of_BART_wins_probsort: '0.622741952656422'
+        rate_of_BART_wins_similsort: '0.622741952656422'
+        rate_of_ties_probsort: '0.14650246655073287'
+        rate_of_ties_similsort: '0.14650246655073287'
         ties:
             mean_tie_simils_probsort: '0.7197922159717136'
             mean_tie_simils_similsort: '0.7197922159717136'
@@ -54,8 +54,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '1633'
             num_of_ties_simils_equal_to_1_similsort: '1633'
             num_of_ties_similsort: '4128'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.3955910852713178'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.3955910852713178'
+            rate_of_ties_simils_equal_to_1_probsort: '0.3955910852713178'
+            rate_of_ties_simils_equal_to_1_similsort: '0.3955910852713178'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -74,10 +74,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '12592'
         num_correct_formulas_at_best_prob: '12592'
         num_correct_formulas_at_best_simil: '12592'
-        percentage_of_all_correct_formulas: '0.4585078105086844'
-        percentage_of_at_least_one_correct_formula: '0.4468893068814991'
-        percentage_of_correct_formulas_at_best_prob: '0.4468893068814991'
-        percentage_of_correct_formulas_at_best_simil: '0.4468893068814991'
+        rate_of_all_correct_formulas: '0.4585078105086844'
+        rate_of_at_least_one_correct_formula: '0.4468893068814991'
+        rate_of_correct_formulas_at_best_prob: '0.4468893068814991'
+        rate_of_correct_formulas_at_best_simil: '0.4468893068814991'
     hit_at_k_prob: '[(1, 0.2682684458955886)]'
     labels_path: data/nist/valid_with_db_index.jsonl
     num_datapoints_tested: '28177'
@@ -86,22 +86,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '6767'
         num_precise_preds_similsort: '6767'
-        percentage_of_precise_preds_probsort: '0.24016041452248288'
-        percentage_of_precise_preds_similsort: '0.24016041452248288'
+        rate_of_precise_preds_probsort: '0.24016041452248288'
+        rate_of_precise_preds_similsort: '0.24016041452248288'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 7559)])
         num_1_hits_as_first_probsort: '7559'
         num_1_hits_as_first_similsort: '7559'
         num_fp_simil_fail_prob: '792'
         num_fp_simil_fail_simil: '792'
-        percentage_of_1_hits_as_first_probsort: '0.2682684458955886'
-        percentage_of_1_hits_as_first_similsort: '0.2682684458955886'
+        rate_of_1_hits_as_first_probsort: '0.2682684458955886'
+        rate_of_1_hits_as_first_similsort: '0.2682684458955886'
     start_time_utc: 06/10/2024 23:57:15
     threshold_stats:
         num_better_than_threshold_probsort: '7919'
         num_better_than_threshold_similsort: '7919'
-        percentage_of_better_than_threshold_probsort: '0.2810448237924548'
-        percentage_of_better_than_threshold_similsort: '0.2810448237924548'
+        rate_of_better_than_threshold_probsort: '0.2810448237924548'
+        rate_of_better_than_threshold_similsort: '0.2810448237924548'
         threshold: '0.85'
     topk_probsort: '[0.5347330868593265]'
     topk_similsort: '[0.5347330868593265]'
