--- a/clean_paper/predictions/dashing-grass-547_exp3_mf100/NIST/1727961993_valid_full_greedy/log_file.yaml
+++ b/clean_paper/predictions/dashing-grass-547_exp3_mf100/NIST/1727961993_valid_full_greedy/log_file.yaml
@@ -43,10 +43,10 @@ evaluation_0:
         mean_db_score: '0.3873157933415626'
         mean_fpsd_score_probsort: '0.16061093322638664'
         mean_fpsd_score_similsort: '0.16061093322638664'
-        percentage_of_BART_wins_probsort: '0.6335308939915534'
-        percentage_of_BART_wins_similsort: '0.6335308939915534'
-        percentage_of_ties_probsort: '0.14593462753309436'
-        percentage_of_ties_similsort: '0.14593462753309436'
+        rate_of_BART_wins_probsort: '0.6335308939915534'
+        rate_of_BART_wins_similsort: '0.6335308939915534'
+        rate_of_ties_probsort: '0.14593462753309436'
+        rate_of_ties_similsort: '0.14593462753309436'
         ties:
             mean_tie_simils_probsort: '0.7209020487193871'
             mean_tie_simils_similsort: '0.7209020487193871'
@@ -54,8 +54,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '1625'
             num_of_ties_simils_equal_to_1_similsort: '1625'
             num_of_ties_similsort: '4112'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.3951848249027237'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.3951848249027237'
+            rate_of_ties_simils_equal_to_1_probsort: '0.3951848249027237'
+            rate_of_ties_simils_equal_to_1_similsort: '0.3951848249027237'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -74,10 +74,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '12213'
         num_correct_formulas_at_best_prob: '12213'
         num_correct_formulas_at_best_simil: '12213'
-        percentage_of_all_correct_formulas: '0.4458601051401869'
-        percentage_of_at_least_one_correct_formula: '0.4334386201511871'
-        percentage_of_correct_formulas_at_best_prob: '0.4334386201511871'
-        percentage_of_correct_formulas_at_best_simil: '0.4334386201511871'
+        rate_of_all_correct_formulas: '0.4458601051401869'
+        rate_of_at_least_one_correct_formula: '0.4334386201511871'
+        rate_of_correct_formulas_at_best_prob: '0.4334386201511871'
+        rate_of_correct_formulas_at_best_simil: '0.4334386201511871'
     hit_at_k_prob: '[(1, 0.279838165879973)]'
     labels_path: data/nist/valid_with_db_index.jsonl
     num_datapoints_tested: '28177'
@@ -86,22 +86,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '6892'
         num_precise_preds_similsort: '6892'
-        percentage_of_precise_preds_probsort: '0.24459665684778364'
-        percentage_of_precise_preds_similsort: '0.24459665684778364'
+        rate_of_precise_preds_probsort: '0.24459665684778364'
+        rate_of_precise_preds_similsort: '0.24459665684778364'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 7885)])
         num_1_hits_as_first_probsort: '7885'
         num_1_hits_as_first_similsort: '7885'
         num_fp_simil_fail_prob: '993'
         num_fp_simil_fail_simil: '993'
-        percentage_of_1_hits_as_first_probsort: '0.279838165879973'
-        percentage_of_1_hits_as_first_similsort: '0.279838165879973'
+        rate_of_1_hits_as_first_probsort: '0.279838165879973'
+        rate_of_1_hits_as_first_similsort: '0.279838165879973'
     start_time_utc: 04/10/2024 09:24:53
     threshold_stats:
         num_better_than_threshold_probsort: '8296'
         num_better_than_threshold_similsort: '8296'
-        percentage_of_better_than_threshold_probsort: '0.294424530645562'
-        percentage_of_better_than_threshold_similsort: '0.294424530645562'
+        rate_of_better_than_threshold_probsort: '0.294424530645562'
+        rate_of_better_than_threshold_similsort: '0.294424530645562'
         threshold: '0.85'
     topk_probsort: '[0.5479267265679493]'
     topk_similsort: '[0.5479267265679493]'
@@ -111,10 +111,10 @@ evaluation_1:
         mean_db_score: '0.3873157933415626'
         mean_fpsd_score_probsort: '0.16061093322638664'
         mean_fpsd_score_similsort: '0.16061093322638664'
-        percentage_of_BART_wins_probsort: '0.6335308939915534'
-        percentage_of_BART_wins_similsort: '0.6335308939915534'
-        percentage_of_ties_probsort: '0.14593462753309436'
-        percentage_of_ties_similsort: '0.14593462753309436'
+        rate_of_BART_wins_probsort: '0.6335308939915534'
+        rate_of_BART_wins_similsort: '0.6335308939915534'
+        rate_of_ties_probsort: '0.14593462753309436'
+        rate_of_ties_similsort: '0.14593462753309436'
         ties:
             mean_tie_simils_probsort: '0.7209020487193871'
             mean_tie_simils_similsort: '0.7209020487193871'
@@ -122,8 +122,8 @@ evaluation_1:
             num_of_ties_simils_equal_to_1_probsort: '1625'
             num_of_ties_simils_equal_to_1_similsort: '1625'
             num_of_ties_similsort: '4112'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.3951848249027237'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.3951848249027237'
+            rate_of_ties_simils_equal_to_1_probsort: '0.3951848249027237'
+            rate_of_ties_simils_equal_to_1_similsort: '0.3951848249027237'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -142,10 +142,10 @@ evaluation_1:
         num_at_least_one_correct_formula: '12213'
         num_correct_formulas_at_best_prob: '12213'
         num_correct_formulas_at_best_simil: '12213'
-        percentage_of_all_correct_formulas: '0.4458601051401869'
-        percentage_of_at_least_one_correct_formula: '0.4334386201511871'
-        percentage_of_correct_formulas_at_best_prob: '0.4334386201511871'
-        percentage_of_correct_formulas_at_best_simil: '0.4334386201511871'
+        rate_of_all_correct_formulas: '0.4458601051401869'
+        rate_of_at_least_one_correct_formula: '0.4334386201511871'
+        rate_of_correct_formulas_at_best_prob: '0.4334386201511871'
+        rate_of_correct_formulas_at_best_simil: '0.4334386201511871'
     hit_at_k_prob: '[(1, 0.279838165879973)]'
     labels_path: data/nist/valid_with_db_index.jsonl
     num_datapoints_tested: '28177'
@@ -154,22 +154,22 @@ evaluation_1:
     precise_preds_stats:
         num_precise_preds_probsort: '6892'
         num_precise_preds_similsort: '6892'
-        percentage_of_precise_preds_probsort: '0.24459665684778364'
-        percentage_of_precise_preds_similsort: '0.24459665684778364'
+        rate_of_precise_preds_probsort: '0.24459665684778364'
+        rate_of_precise_preds_similsort: '0.24459665684778364'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 7885)])
         num_1_hits_as_first_probsort: '7885'
         num_1_hits_as_first_similsort: '7885'
         num_fp_simil_fail_prob: '993'
         num_fp_simil_fail_simil: '993'
-        percentage_of_1_hits_as_first_probsort: '0.279838165879973'
-        percentage_of_1_hits_as_first_similsort: '0.279838165879973'
+        rate_of_1_hits_as_first_probsort: '0.279838165879973'
+        rate_of_1_hits_as_first_similsort: '0.279838165879973'
     start_time_utc: 04/10/2024 09:27:18
     threshold_stats:
         num_better_than_threshold_probsort: '8296'
         num_better_than_threshold_similsort: '8296'
-        percentage_of_better_than_threshold_probsort: '0.294424530645562'
-        percentage_of_better_than_threshold_similsort: '0.294424530645562'
+        rate_of_better_than_threshold_probsort: '0.294424530645562'
+        rate_of_better_than_threshold_similsort: '0.294424530645562'
         threshold: '0.85'
     topk_probsort: '[0.5479267265679493]'
     topk_similsort: '[0.5479267265679493]'
