--- a/clean_paper/predictions/devout-disco-532_exp2_log_20_1.43/NIST/1728026100_valid_full_greedy/log_file.yaml
+++ b/clean_paper/predictions/devout-disco-532_exp2_log_20_1.43/NIST/1728026100_valid_full_greedy/log_file.yaml
@@ -43,10 +43,10 @@ evaluation_0:
         mean_db_score: '0.3873157933415626'
         mean_fpsd_score_probsort: '0.16755492111471468'
         mean_fpsd_score_similsort: '0.16755492111471468'
-        percentage_of_BART_wins_probsort: '0.6462008020726124'
-        percentage_of_BART_wins_similsort: '0.6462008020726124'
-        percentage_of_ties_probsort: '0.1405046669269262'
-        percentage_of_ties_similsort: '0.1405046669269262'
+        rate_of_BART_wins_probsort: '0.6462008020726124'
+        rate_of_BART_wins_similsort: '0.6462008020726124'
+        rate_of_ties_probsort: '0.1405046669269262'
+        rate_of_ties_similsort: '0.1405046669269262'
         ties:
             mean_tie_simils_probsort: '0.7275752607557351'
             mean_tie_simils_similsort: '0.7275752607557351'
@@ -54,8 +54,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '1653'
             num_of_ties_simils_equal_to_1_similsort: '1653'
             num_of_ties_similsort: '3959'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.4175296792119222'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.4175296792119222'
+            rate_of_ties_simils_equal_to_1_probsort: '0.4175296792119222'
+            rate_of_ties_simils_equal_to_1_similsort: '0.4175296792119222'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -74,10 +74,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '13468'
         num_correct_formulas_at_best_prob: '13468'
         num_correct_formulas_at_best_simil: '13468'
-        percentage_of_all_correct_formulas: '0.4897988871513256'
-        percentage_of_at_least_one_correct_formula: '0.47797849309720697'
-        percentage_of_correct_formulas_at_best_prob: '0.47797849309720697'
-        percentage_of_correct_formulas_at_best_simil: '0.47797849309720697'
+        rate_of_all_correct_formulas: '0.4897988871513256'
+        rate_of_at_least_one_correct_formula: '0.47797849309720697'
+        rate_of_correct_formulas_at_best_prob: '0.47797849309720697'
+        rate_of_correct_formulas_at_best_simil: '0.47797849309720697'
     hit_at_k_prob: '[(1, 0.29648294708450157)]'
     labels_path: data/nist/valid_with_db_index.jsonl
     num_datapoints_tested: '28177'
@@ -86,22 +86,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '7669'
         num_precise_preds_similsort: '7669'
-        percentage_of_precise_preds_probsort: '0.2721723391418533'
-        percentage_of_precise_preds_similsort: '0.2721723391418533'
+        rate_of_precise_preds_probsort: '0.2721723391418533'
+        rate_of_precise_preds_similsort: '0.2721723391418533'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 8354)])
         num_1_hits_as_first_probsort: '8354'
         num_1_hits_as_first_similsort: '8354'
         num_fp_simil_fail_prob: '685'
         num_fp_simil_fail_simil: '685'
-        percentage_of_1_hits_as_first_probsort: '0.29648294708450157'
-        percentage_of_1_hits_as_first_similsort: '0.29648294708450157'
+        rate_of_1_hits_as_first_probsort: '0.29648294708450157'
+        rate_of_1_hits_as_first_similsort: '0.29648294708450157'
     start_time_utc: 06/10/2024 23:57:15
     threshold_stats:
         num_better_than_threshold_probsort: '8715'
         num_better_than_threshold_similsort: '8715'
-        percentage_of_better_than_threshold_probsort: '0.3092948149199702'
-        percentage_of_better_than_threshold_similsort: '0.3092948149199702'
+        rate_of_better_than_threshold_probsort: '0.3092948149199702'
+        rate_of_better_than_threshold_similsort: '0.3092948149199702'
         threshold: '0.85'
     topk_probsort: '[0.5548707144562773]'
     topk_similsort: '[0.5548707144562773]'
