--- a/clean_paper/predictions/exalted-elevator-545_exp3_mf10/NIST/1727961994_valid_full_greedy/log_file.yaml
+++ b/clean_paper/predictions/exalted-elevator-545_exp3_mf10/NIST/1727961994_valid_full_greedy/log_file.yaml
@@ -43,10 +43,10 @@ evaluation_0:
         mean_db_score: '0.3873157933415626'
         mean_fpsd_score_probsort: '0.15698203896629664'
         mean_fpsd_score_similsort: '0.15698203896629664'
-        percentage_of_BART_wins_probsort: '0.6305497391489513'
-        percentage_of_BART_wins_similsort: '0.6305497391489513'
-        percentage_of_ties_probsort: '0.14998048053376867'
-        percentage_of_ties_similsort: '0.14998048053376867'
+        rate_of_BART_wins_probsort: '0.6305497391489513'
+        rate_of_BART_wins_similsort: '0.6305497391489513'
+        rate_of_ties_probsort: '0.14998048053376867'
+        rate_of_ties_similsort: '0.14998048053376867'
         ties:
             mean_tie_simils_probsort: '0.7181416214972339'
             mean_tie_simils_similsort: '0.7181416214972339'
@@ -54,8 +54,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '1649'
             num_of_ties_simils_equal_to_1_similsort: '1649'
             num_of_ties_similsort: '4226'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.3902035021296735'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.3902035021296735'
+            rate_of_ties_simils_equal_to_1_probsort: '0.3902035021296735'
+            rate_of_ties_simils_equal_to_1_similsort: '0.3902035021296735'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -74,10 +74,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '12075'
         num_correct_formulas_at_best_prob: '12075'
         num_correct_formulas_at_best_simil: '12075'
-        percentage_of_all_correct_formulas: '0.44064518483377735'
-        percentage_of_at_least_one_correct_formula: '0.4285410086240551'
-        percentage_of_correct_formulas_at_best_prob: '0.4285410086240551'
-        percentage_of_correct_formulas_at_best_simil: '0.4285410086240551'
+        rate_of_all_correct_formulas: '0.44064518483377735'
+        rate_of_at_least_one_correct_formula: '0.4285410086240551'
+        rate_of_correct_formulas_at_best_prob: '0.4285410086240551'
+        rate_of_correct_formulas_at_best_simil: '0.4285410086240551'
     hit_at_k_prob: '[(1, 0.2760052525109132)]'
     labels_path: data/nist/valid_with_db_index.jsonl
     num_datapoints_tested: '28177'
@@ -86,22 +86,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '6771'
         num_precise_preds_similsort: '6771'
-        percentage_of_precise_preds_probsort: '0.2403023742768925'
-        percentage_of_precise_preds_similsort: '0.2403023742768925'
+        rate_of_precise_preds_probsort: '0.2403023742768925'
+        rate_of_precise_preds_similsort: '0.2403023742768925'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 7777)])
         num_1_hits_as_first_probsort: '7777'
         num_1_hits_as_first_similsort: '7777'
         num_fp_simil_fail_prob: '1006'
         num_fp_simil_fail_simil: '1006'
-        percentage_of_1_hits_as_first_probsort: '0.2760052525109132'
-        percentage_of_1_hits_as_first_similsort: '0.2760052525109132'
+        rate_of_1_hits_as_first_probsort: '0.2760052525109132'
+        rate_of_1_hits_as_first_similsort: '0.2760052525109132'
     start_time_utc: 04/10/2024 09:24:53
     threshold_stats:
         num_better_than_threshold_probsort: '8184'
         num_better_than_threshold_similsort: '8184'
-        percentage_of_better_than_threshold_probsort: '0.2904496575220925'
-        percentage_of_better_than_threshold_similsort: '0.2904496575220925'
+        rate_of_better_than_threshold_probsort: '0.2904496575220925'
+        rate_of_better_than_threshold_similsort: '0.2904496575220925'
         threshold: '0.85'
     topk_probsort: '[0.5442978323078592]'
     topk_similsort: '[0.5442978323078592]'
@@ -111,10 +111,10 @@ evaluation_1:
         mean_db_score: '0.3873157933415626'
         mean_fpsd_score_probsort: '0.15698203896629664'
         mean_fpsd_score_similsort: '0.15698203896629664'
-        percentage_of_BART_wins_probsort: '0.6305497391489513'
-        percentage_of_BART_wins_similsort: '0.6305497391489513'
-        percentage_of_ties_probsort: '0.14998048053376867'
-        percentage_of_ties_similsort: '0.14998048053376867'
+        rate_of_BART_wins_probsort: '0.6305497391489513'
+        rate_of_BART_wins_similsort: '0.6305497391489513'
+        rate_of_ties_probsort: '0.14998048053376867'
+        rate_of_ties_similsort: '0.14998048053376867'
         ties:
             mean_tie_simils_probsort: '0.7181416214972339'
             mean_tie_simils_similsort: '0.7181416214972339'
@@ -122,8 +122,8 @@ evaluation_1:
             num_of_ties_simils_equal_to_1_probsort: '1649'
             num_of_ties_simils_equal_to_1_similsort: '1649'
             num_of_ties_similsort: '4226'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.3902035021296735'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.3902035021296735'
+            rate_of_ties_simils_equal_to_1_probsort: '0.3902035021296735'
+            rate_of_ties_simils_equal_to_1_similsort: '0.3902035021296735'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -142,10 +142,10 @@ evaluation_1:
         num_at_least_one_correct_formula: '12075'
         num_correct_formulas_at_best_prob: '12075'
         num_correct_formulas_at_best_simil: '12075'
-        percentage_of_all_correct_formulas: '0.44064518483377735'
-        percentage_of_at_least_one_correct_formula: '0.4285410086240551'
-        percentage_of_correct_formulas_at_best_prob: '0.4285410086240551'
-        percentage_of_correct_formulas_at_best_simil: '0.4285410086240551'
+        rate_of_all_correct_formulas: '0.44064518483377735'
+        rate_of_at_least_one_correct_formula: '0.4285410086240551'
+        rate_of_correct_formulas_at_best_prob: '0.4285410086240551'
+        rate_of_correct_formulas_at_best_simil: '0.4285410086240551'
     hit_at_k_prob: '[(1, 0.2760052525109132)]'
     labels_path: data/nist/valid_with_db_index.jsonl
     num_datapoints_tested: '28177'
@@ -154,22 +154,22 @@ evaluation_1:
     precise_preds_stats:
         num_precise_preds_probsort: '6771'
         num_precise_preds_similsort: '6771'
-        percentage_of_precise_preds_probsort: '0.2403023742768925'
-        percentage_of_precise_preds_similsort: '0.2403023742768925'
+        rate_of_precise_preds_probsort: '0.2403023742768925'
+        rate_of_precise_preds_similsort: '0.2403023742768925'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 7777)])
         num_1_hits_as_first_probsort: '7777'
         num_1_hits_as_first_similsort: '7777'
         num_fp_simil_fail_prob: '1006'
         num_fp_simil_fail_simil: '1006'
-        percentage_of_1_hits_as_first_probsort: '0.2760052525109132'
-        percentage_of_1_hits_as_first_similsort: '0.2760052525109132'
+        rate_of_1_hits_as_first_probsort: '0.2760052525109132'
+        rate_of_1_hits_as_first_similsort: '0.2760052525109132'
     start_time_utc: 04/10/2024 09:27:18
     threshold_stats:
         num_better_than_threshold_probsort: '8184'
         num_better_than_threshold_similsort: '8184'
-        percentage_of_better_than_threshold_probsort: '0.2904496575220925'
-        percentage_of_better_than_threshold_similsort: '0.2904496575220925'
+        rate_of_better_than_threshold_probsort: '0.2904496575220925'
+        rate_of_better_than_threshold_similsort: '0.2904496575220925'
         threshold: '0.85'
     topk_probsort: '[0.5442978323078592]'
     topk_similsort: '[0.5442978323078592]'
