--- a/clean_paper/predictions/fearless-wildflower-490_rassp1_neims1_224kPretrain_148k/MACE/1725033370_43_full_beam10/log_file.yaml
+++ b/clean_paper/predictions/fearless-wildflower-490_rassp1_neims1_224kPretrain_148k/MACE/1725033370_43_full_beam10/log_file.yaml
@@ -58,10 +58,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '36'
         num_correct_formulas_at_best_prob: '23'
         num_correct_formulas_at_best_simil: '26'
-        percentage_of_all_correct_formulas: '0.4014962593516209'
-        percentage_of_at_least_one_correct_formula: '0.8372093023255814'
-        percentage_of_correct_formulas_at_best_prob: '0.5348837209302325'
-        percentage_of_correct_formulas_at_best_simil: '0.6046511627906976'
+        rate_of_all_correct_formulas: '0.4014962593516209'
+        rate_of_at_least_one_correct_formula: '0.8372093023255814'
+        rate_of_correct_formulas_at_best_prob: '0.5348837209302325'
+        rate_of_correct_formulas_at_best_simil: '0.6046511627906976'
     hit_at_k_prob: '[(1, 0.06976744186046512), (2, 0.13953488372093023), (4, 0.16279069767441862),
         (5, 0.18604651162790697), (6, 0.20930232558139536)]'
     labels_path: data/mace/MACE_r05.jsonl
@@ -71,22 +71,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '2'
         num_precise_preds_similsort: '9'
-        percentage_of_precise_preds_probsort: '0.046511627906976744'
-        percentage_of_precise_preds_similsort: '0.20930232558139536'
+        rate_of_precise_preds_probsort: '0.046511627906976744'
+        rate_of_precise_preds_similsort: '0.20930232558139536'
     simil_1_hits:
         counter_multiple_hits: dict_items([(3, 3), (1, 4), (2, 2)])
         num_1_hits_as_first_probsort: '3'
         num_1_hits_as_first_similsort: '9'
         num_fp_simil_fail_prob: '1'
         num_fp_simil_fail_simil: '0'
-        percentage_of_1_hits_as_first_probsort: '0.06976744186046512'
-        percentage_of_1_hits_as_first_similsort: '0.20930232558139536'
+        rate_of_1_hits_as_first_probsort: '0.06976744186046512'
+        rate_of_1_hits_as_first_similsort: '0.20930232558139536'
     start_time_utc: 30/08/2024 17:59:03
     threshold_stats:
         num_better_than_threshold_probsort: '4'
         num_better_than_threshold_similsort: '9'
-        percentage_of_better_than_threshold_probsort: '0.09302325581395349'
-        percentage_of_better_than_threshold_similsort: '0.20930232558139536'
+        rate_of_better_than_threshold_probsort: '0.09302325581395349'
+        rate_of_better_than_threshold_similsort: '0.20930232558139536'
         threshold: '0.85'
     topk_probsort: '[0.4465790249838072, 0.4297477209176928, 0.4159758768225845, 0.3774830884694864,
         0.4197356287151259, 0.3801338170668415, 0.3773212176304996, 0.4101433531332224,
@@ -100,10 +100,10 @@ evaluation_1:
         mean_db_score: '0.3175050468972732'
         mean_fpsd_score_probsort: '0.12907397808653398'
         mean_fpsd_score_similsort: '0.24310983579438636'
-        percentage_of_BART_wins_probsort: '0.6976744186046512'
-        percentage_of_BART_wins_similsort: '0.813953488372093'
-        percentage_of_ties_probsort: '0.046511627906976744'
-        percentage_of_ties_similsort: '0.09302325581395349'
+        rate_of_BART_wins_probsort: '0.6976744186046512'
+        rate_of_BART_wins_similsort: '0.813953488372093'
+        rate_of_ties_probsort: '0.046511627906976744'
+        rate_of_ties_similsort: '0.09302325581395349'
         ties:
             mean_tie_simils_probsort: '0.28034188034188035'
             mean_tie_simils_similsort: '0.5825320512820513'
@@ -111,8 +111,8 @@ evaluation_1:
             num_of_ties_simils_equal_to_1_probsort: '0'
             num_of_ties_simils_equal_to_1_similsort: '2'
             num_of_ties_similsort: '4'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.0'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.5'
+            rate_of_ties_simils_equal_to_1_probsort: '0.0'
+            rate_of_ties_simils_equal_to_1_similsort: '0.5'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -131,10 +131,10 @@ evaluation_1:
         num_at_least_one_correct_formula: '36'
         num_correct_formulas_at_best_prob: '23'
         num_correct_formulas_at_best_simil: '26'
-        percentage_of_all_correct_formulas: '0.4014962593516209'
-        percentage_of_at_least_one_correct_formula: '0.8372093023255814'
-        percentage_of_correct_formulas_at_best_prob: '0.5348837209302325'
-        percentage_of_correct_formulas_at_best_simil: '0.6046511627906976'
+        rate_of_all_correct_formulas: '0.4014962593516209'
+        rate_of_at_least_one_correct_formula: '0.8372093023255814'
+        rate_of_correct_formulas_at_best_prob: '0.5348837209302325'
+        rate_of_correct_formulas_at_best_simil: '0.6046511627906976'
     hit_at_k_prob: '[(1, 0.06976744186046512), (2, 0.13953488372093023), (4, 0.16279069767441862),
         (5, 0.18604651162790697), (6, 0.20930232558139536)]'
     labels_path: data/mace/MACE_r05_with_db_index.jsonl
@@ -144,22 +144,22 @@ evaluation_1:
     precise_preds_stats:
         num_precise_preds_probsort: '2'
         num_precise_preds_similsort: '9'
-        percentage_of_precise_preds_probsort: '0.046511627906976744'
-        percentage_of_precise_preds_similsort: '0.20930232558139536'
+        rate_of_precise_preds_probsort: '0.046511627906976744'
+        rate_of_precise_preds_similsort: '0.20930232558139536'
     simil_1_hits:
         counter_multiple_hits: dict_items([(3, 3), (1, 4), (2, 2)])
         num_1_hits_as_first_probsort: '3'
         num_1_hits_as_first_similsort: '9'
         num_fp_simil_fail_prob: '1'
         num_fp_simil_fail_simil: '0'
-        percentage_of_1_hits_as_first_probsort: '0.06976744186046512'
-        percentage_of_1_hits_as_first_similsort: '0.20930232558139536'
+        rate_of_1_hits_as_first_probsort: '0.06976744186046512'
+        rate_of_1_hits_as_first_similsort: '0.20930232558139536'
     start_time_utc: 30/08/2024 19:18:58
     threshold_stats:
         num_better_than_threshold_probsort: '4'
         num_better_than_threshold_similsort: '9'
-        percentage_of_better_than_threshold_probsort: '0.09302325581395349'
-        percentage_of_better_than_threshold_similsort: '0.20930232558139536'
+        rate_of_better_than_threshold_probsort: '0.09302325581395349'
+        rate_of_better_than_threshold_similsort: '0.20930232558139536'
         threshold: '0.85'
     topk_probsort: '[0.4465790249838072, 0.4297477209176928, 0.4159758768225845, 0.3774830884694864,
         0.4197356287151259, 0.3801338170668415, 0.3773212176304996, 0.4101433531332224,
@@ -187,10 +187,10 @@ evaluation_2:
         num_at_least_one_correct_formula: '2'
         num_correct_formulas_at_best_prob: '1'
         num_correct_formulas_at_best_simil: '2'
-        percentage_of_all_correct_formulas: '0.0199501246882793'
-        percentage_of_at_least_one_correct_formula: '0.046511627906976744'
-        percentage_of_correct_formulas_at_best_prob: '0.023255813953488372'
-        percentage_of_correct_formulas_at_best_simil: '0.046511627906976744'
+        rate_of_all_correct_formulas: '0.0199501246882793'
+        rate_of_at_least_one_correct_formula: '0.046511627906976744'
+        rate_of_correct_formulas_at_best_prob: '0.023255813953488372'
+        rate_of_correct_formulas_at_best_simil: '0.046511627906976744'
     hit_at_k_prob: '[(4, 0.023255813953488372)]'
     labels_path: data/mace/MACE_r05.jsonl
     num_datapoints_tested: '43'
@@ -199,22 +199,22 @@ evaluation_2:
     precise_preds_stats:
         num_precise_preds_probsort: '0'
         num_precise_preds_similsort: '1'
-        percentage_of_precise_preds_probsort: '0.0'
-        percentage_of_precise_preds_similsort: '0.023255813953488372'
+        rate_of_precise_preds_probsort: '0.0'
+        rate_of_precise_preds_similsort: '0.023255813953488372'
     simil_1_hits:
         counter_multiple_hits: dict_items([(3, 1)])
         num_1_hits_as_first_probsort: '0'
         num_1_hits_as_first_similsort: '1'
         num_fp_simil_fail_prob: '0'
         num_fp_simil_fail_simil: '0'
-        percentage_of_1_hits_as_first_probsort: '0.0'
-        percentage_of_1_hits_as_first_similsort: '0.023255813953488372'
+        rate_of_1_hits_as_first_probsort: '0.0'
+        rate_of_1_hits_as_first_similsort: '0.023255813953488372'
     start_time_utc: 01/09/2024 10:21:52
     threshold_stats:
         num_better_than_threshold_probsort: '1'
         num_better_than_threshold_similsort: '1'
-        percentage_of_better_than_threshold_probsort: '0.023255813953488372'
-        percentage_of_better_than_threshold_similsort: '0.023255813953488372'
+        rate_of_better_than_threshold_probsort: '0.023255813953488372'
+        rate_of_better_than_threshold_similsort: '0.023255813953488372'
         threshold: '0.85'
     topk_probsort: '[0.19675704649159967, 0.20241746469263644, 0.1857612000888857,
         0.18467116228183053, 0.19519563251254532, 0.1912561511078383, 0.19799170758642354,
