--- a/clean_paper/predictions/fearless-wildflower-490_rassp1_neims1_224kPretrain_148k/MACE/1725179758_all_full_beam10/log_file.yaml
+++ b/clean_paper/predictions/fearless-wildflower-490_rassp1_neims1_224kPretrain_148k/MACE/1725179758_all_full_beam10/log_file.yaml
@@ -58,10 +58,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '38'
         num_correct_formulas_at_best_prob: '24'
         num_correct_formulas_at_best_simil: '29'
-        percentage_of_all_correct_formulas: '0.06626506024096386'
-        percentage_of_at_least_one_correct_formula: '0.1557377049180328'
-        percentage_of_correct_formulas_at_best_prob: '0.09836065573770492'
-        percentage_of_correct_formulas_at_best_simil: '0.11885245901639344'
+        rate_of_all_correct_formulas: '0.06626506024096386'
+        rate_of_at_least_one_correct_formula: '0.1557377049180328'
+        rate_of_correct_formulas_at_best_prob: '0.09836065573770492'
+        rate_of_correct_formulas_at_best_simil: '0.11885245901639344'
     hit_at_k_prob: '[(1, 0.020491803278688523), (2, 0.036885245901639344), (3, 0.04918032786885246),
         (4, 0.06557377049180328), (5, 0.08196721311475409)]'
     labels_path: data/mace/MACE_r05.jsonl
@@ -71,22 +71,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '4'
         num_precise_preds_similsort: '20'
-        percentage_of_precise_preds_probsort: '0.01639344262295082'
-        percentage_of_precise_preds_similsort: '0.08196721311475409'
+        rate_of_precise_preds_probsort: '0.01639344262295082'
+        rate_of_precise_preds_similsort: '0.08196721311475409'
     simil_1_hits:
         counter_multiple_hits: dict_items([(3, 2), (1, 13), (2, 5)])
         num_1_hits_as_first_probsort: '5'
         num_1_hits_as_first_similsort: '20'
         num_fp_simil_fail_prob: '1'
         num_fp_simil_fail_simil: '0'
-        percentage_of_1_hits_as_first_probsort: '0.020491803278688523'
-        percentage_of_1_hits_as_first_similsort: '0.08196721311475409'
+        rate_of_1_hits_as_first_probsort: '0.020491803278688523'
+        rate_of_1_hits_as_first_similsort: '0.08196721311475409'
     start_time_utc: 01/09/2024 11:08:40
     threshold_stats:
         num_better_than_threshold_probsort: '7'
         num_better_than_threshold_similsort: '22'
-        percentage_of_better_than_threshold_probsort: '0.028688524590163935'
-        percentage_of_better_than_threshold_similsort: '0.09016393442622951'
+        rate_of_better_than_threshold_probsort: '0.028688524590163935'
+        rate_of_better_than_threshold_similsort: '0.09016393442622951'
         threshold: '0.85'
     topk_probsort: '[0.28516269523385007, 0.27545015357637886, 0.27846714122497257,
         0.26455568658611744, 0.2667261626632446, 0.2515833987757662, 0.24177916211705733,
@@ -100,10 +100,10 @@ evaluation_1:
         mean_db_score: '0.22742889217712875'
         mean_fpsd_score_probsort: '0.057733803056721336'
         mean_fpsd_score_similsort: '0.14820020166563022'
-        percentage_of_BART_wins_probsort: '0.639344262295082'
-        percentage_of_BART_wins_similsort: '0.8483606557377049'
-        percentage_of_ties_probsort: '0.14344262295081966'
-        percentage_of_ties_similsort: '0.06557377049180328'
+        rate_of_BART_wins_probsort: '0.639344262295082'
+        rate_of_BART_wins_similsort: '0.8483606557377049'
+        rate_of_ties_probsort: '0.14344262295081966'
+        rate_of_ties_similsort: '0.06557377049180328'
         ties:
             mean_tie_simils_probsort: '0.3808131856525586'
             mean_tie_simils_similsort: '0.6006081425199072'
@@ -111,8 +111,8 @@ evaluation_1:
             num_of_ties_simils_equal_to_1_probsort: '4'
             num_of_ties_simils_equal_to_1_similsort: '6'
             num_of_ties_similsort: '16'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.11428571428571428'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.375'
+            rate_of_ties_simils_equal_to_1_probsort: '0.11428571428571428'
+            rate_of_ties_simils_equal_to_1_similsort: '0.375'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -131,10 +131,10 @@ evaluation_1:
         num_at_least_one_correct_formula: '38'
         num_correct_formulas_at_best_prob: '24'
         num_correct_formulas_at_best_simil: '29'
-        percentage_of_all_correct_formulas: '0.06626506024096386'
-        percentage_of_at_least_one_correct_formula: '0.1557377049180328'
-        percentage_of_correct_formulas_at_best_prob: '0.09836065573770492'
-        percentage_of_correct_formulas_at_best_simil: '0.11885245901639344'
+        rate_of_all_correct_formulas: '0.06626506024096386'
+        rate_of_at_least_one_correct_formula: '0.1557377049180328'
+        rate_of_correct_formulas_at_best_prob: '0.09836065573770492'
+        rate_of_correct_formulas_at_best_simil: '0.11885245901639344'
     hit_at_k_prob: '[(1, 0.020491803278688523), (2, 0.036885245901639344), (3, 0.04918032786885246),
         (4, 0.06557377049180328), (5, 0.08196721311475409)]'
     labels_path: data/mace/MACE_r05_with_db_index.jsonl
@@ -144,22 +144,22 @@ evaluation_1:
     precise_preds_stats:
         num_precise_preds_probsort: '4'
         num_precise_preds_similsort: '20'
-        percentage_of_precise_preds_probsort: '0.01639344262295082'
-        percentage_of_precise_preds_similsort: '0.08196721311475409'
+        rate_of_precise_preds_probsort: '0.01639344262295082'
+        rate_of_precise_preds_similsort: '0.08196721311475409'
     simil_1_hits:
         counter_multiple_hits: dict_items([(3, 2), (1, 13), (2, 5)])
         num_1_hits_as_first_probsort: '5'
         num_1_hits_as_first_similsort: '20'
         num_fp_simil_fail_prob: '1'
         num_fp_simil_fail_simil: '0'
-        percentage_of_1_hits_as_first_probsort: '0.020491803278688523'
-        percentage_of_1_hits_as_first_similsort: '0.08196721311475409'
+        rate_of_1_hits_as_first_probsort: '0.020491803278688523'
+        rate_of_1_hits_as_first_similsort: '0.08196721311475409'
     start_time_utc: 01/09/2024 11:19:01
     threshold_stats:
         num_better_than_threshold_probsort: '7'
         num_better_than_threshold_similsort: '22'
-        percentage_of_better_than_threshold_probsort: '0.028688524590163935'
-        percentage_of_better_than_threshold_similsort: '0.09016393442622951'
+        rate_of_better_than_threshold_probsort: '0.028688524590163935'
+        rate_of_better_than_threshold_similsort: '0.09016393442622951'
         threshold: '0.85'
     topk_probsort: '[0.28516269523385007, 0.27545015357637886, 0.27846714122497257,
         0.26455568658611744, 0.2667261626632446, 0.2515833987757662, 0.24177916211705733,
