--- a/clean_paper/predictions/fresh-haze-530_exp1_int_emb_exp2_log_9_2.2/NIST/1728026100_valid_full_greedy/log_file.yaml
+++ b/clean_paper/predictions/fresh-haze-530_exp1_int_emb_exp2_log_9_2.2/NIST/1728026100_valid_full_greedy/log_file.yaml
@@ -43,10 +43,10 @@ evaluation_0:
         mean_db_score: '0.3873157933415626'
         mean_fpsd_score_probsort: '0.15125707725748003'
         mean_fpsd_score_similsort: '0.15125707725748003'
-        percentage_of_BART_wins_probsort: '0.6294140611136743'
-        percentage_of_BART_wins_similsort: '0.6294140611136743'
-        percentage_of_ties_probsort: '0.1387301699968059'
-        percentage_of_ties_similsort: '0.1387301699968059'
+        rate_of_BART_wins_probsort: '0.6294140611136743'
+        rate_of_BART_wins_similsort: '0.6294140611136743'
+        rate_of_ties_probsort: '0.1387301699968059'
+        rate_of_ties_similsort: '0.1387301699968059'
         ties:
             mean_tie_simils_probsort: '0.7330736672600197'
             mean_tie_simils_similsort: '0.7330736672600197'
@@ -54,8 +54,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '1618'
             num_of_ties_simils_equal_to_1_similsort: '1618'
             num_of_ties_similsort: '3909'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.41391660271169095'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.41391660271169095'
+            rate_of_ties_simils_equal_to_1_probsort: '0.41391660271169095'
+            rate_of_ties_simils_equal_to_1_similsort: '0.41391660271169095'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -74,10 +74,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '12763'
         num_correct_formulas_at_best_prob: '12763'
         num_correct_formulas_at_best_simil: '12763'
-        percentage_of_all_correct_formulas: '0.46519171890946204'
-        percentage_of_at_least_one_correct_formula: '0.45295808638251056'
-        percentage_of_correct_formulas_at_best_prob: '0.45295808638251056'
-        percentage_of_correct_formulas_at_best_simil: '0.45295808638251056'
+        rate_of_all_correct_formulas: '0.46519171890946204'
+        rate_of_at_least_one_correct_formula: '0.45295808638251056'
+        rate_of_correct_formulas_at_best_prob: '0.45295808638251056'
+        rate_of_correct_formulas_at_best_simil: '0.45295808638251056'
     hit_at_k_prob: '[(1, 0.27479859459843137)]'
     labels_path: data/nist/valid_with_db_index.jsonl
     num_datapoints_tested: '28177'
@@ -86,22 +86,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '6946'
         num_precise_preds_similsort: '6946'
-        percentage_of_precise_preds_probsort: '0.2465131135323136'
-        percentage_of_precise_preds_similsort: '0.2465131135323136'
+        rate_of_precise_preds_probsort: '0.2465131135323136'
+        rate_of_precise_preds_similsort: '0.2465131135323136'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 7743)])
         num_1_hits_as_first_probsort: '7743'
         num_1_hits_as_first_similsort: '7743'
         num_fp_simil_fail_prob: '797'
         num_fp_simil_fail_simil: '797'
-        percentage_of_1_hits_as_first_probsort: '0.27479859459843137'
-        percentage_of_1_hits_as_first_similsort: '0.27479859459843137'
+        rate_of_1_hits_as_first_probsort: '0.27479859459843137'
+        rate_of_1_hits_as_first_similsort: '0.27479859459843137'
     start_time_utc: 06/10/2024 23:57:15
     threshold_stats:
         num_better_than_threshold_probsort: '8115'
         num_better_than_threshold_similsort: '8115'
-        percentage_of_better_than_threshold_probsort: '0.28800085175852647'
-        percentage_of_better_than_threshold_similsort: '0.28800085175852647'
+        rate_of_better_than_threshold_probsort: '0.28800085175852647'
+        rate_of_better_than_threshold_similsort: '0.28800085175852647'
         threshold: '0.85'
     topk_probsort: '[0.5385728705990427]'
     topk_similsort: '[0.5385728705990427]'
