--- a/clean_paper/predictions/hopeful-rain-557_exp4_rassp_neims_nist/MACE/1727882289_all_full_beam10/log_file.yaml
+++ b/clean_paper/predictions/hopeful-rain-557_exp4_rassp_neims_nist/MACE/1727882289_all_full_beam10/log_file.yaml
@@ -44,10 +44,10 @@ evaluation_0:
         mean_db_score: '0.22742889217712875'
         mean_fpsd_score_probsort: '0.04986112903693267'
         mean_fpsd_score_similsort: '0.1300921445330817'
-        percentage_of_BART_wins_probsort: '0.6516393442622951'
-        percentage_of_BART_wins_similsort: '0.8360655737704918'
-        percentage_of_ties_probsort: '0.06967213114754098'
-        percentage_of_ties_similsort: '0.06967213114754098'
+        rate_of_BART_wins_probsort: '0.6516393442622951'
+        rate_of_BART_wins_similsort: '0.8360655737704918'
+        rate_of_ties_probsort: '0.06967213114754098'
+        rate_of_ties_similsort: '0.06967213114754098'
         ties:
             mean_tie_simils_probsort: '0.550481853423876'
             mean_tie_simils_similsort: '0.638933493528255'
@@ -55,8 +55,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '4'
             num_of_ties_simils_equal_to_1_similsort: '6'
             num_of_ties_similsort: '17'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.23529411764705882'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.35294117647058826'
+            rate_of_ties_simils_equal_to_1_probsort: '0.23529411764705882'
+            rate_of_ties_simils_equal_to_1_similsort: '0.35294117647058826'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -75,10 +75,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '36'
         num_correct_formulas_at_best_prob: '28'
         num_correct_formulas_at_best_simil: '28'
-        percentage_of_all_correct_formulas: '0.06822033898305084'
-        percentage_of_at_least_one_correct_formula: '0.14754098360655737'
-        percentage_of_correct_formulas_at_best_prob: '0.11475409836065574'
-        percentage_of_correct_formulas_at_best_simil: '0.11475409836065574'
+        rate_of_all_correct_formulas: '0.06822033898305084'
+        rate_of_at_least_one_correct_formula: '0.14754098360655737'
+        rate_of_correct_formulas_at_best_prob: '0.11475409836065574'
+        rate_of_correct_formulas_at_best_simil: '0.11475409836065574'
     hit_at_k_prob: '[(1, 0.028688524590163935), (2, 0.03278688524590164), (5, 0.040983606557377046),
         (7, 0.05327868852459016), (8, 0.05737704918032787), (9, 0.06557377049180328)]'
     labels_path: data/mace/MACE_r05_with_db_index.jsonl
@@ -88,22 +88,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '4'
         num_precise_preds_similsort: '13'
-        percentage_of_precise_preds_probsort: '0.01639344262295082'
-        percentage_of_precise_preds_similsort: '0.05327868852459016'
+        rate_of_precise_preds_probsort: '0.01639344262295082'
+        rate_of_precise_preds_similsort: '0.05327868852459016'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 12), (4, 1), (2, 2), (3, 1)])
         num_1_hits_as_first_probsort: '7'
         num_1_hits_as_first_similsort: '16'
         num_fp_simil_fail_prob: '3'
         num_fp_simil_fail_simil: '3'
-        percentage_of_1_hits_as_first_probsort: '0.028688524590163935'
-        percentage_of_1_hits_as_first_similsort: '0.06557377049180328'
+        rate_of_1_hits_as_first_probsort: '0.028688524590163935'
+        rate_of_1_hits_as_first_similsort: '0.06557377049180328'
     start_time_utc: 02/10/2024 18:32:47
     threshold_stats:
         num_better_than_threshold_probsort: '9'
         num_better_than_threshold_similsort: '18'
-        percentage_of_better_than_threshold_probsort: '0.036885245901639344'
-        percentage_of_better_than_threshold_similsort: '0.07377049180327869'
+        rate_of_better_than_threshold_probsort: '0.036885245901639344'
+        rate_of_better_than_threshold_similsort: '0.07377049180327869'
         threshold: '0.85'
     topk_probsort: '[0.27729002121406143, 0.2572761792682157, 0.2536041194470693,
         0.24927035948735696, 0.248529674218188, 0.23946015020925188, 0.24881662224238346,
