--- a/clean_paper/predictions/hopeful-rain-557_exp4_rassp_neims_nist/NIST/1727883450_valid_full_greedy/log_file.yaml
+++ b/clean_paper/predictions/hopeful-rain-557_exp4_rassp_neims_nist/NIST/1727883450_valid_full_greedy/log_file.yaml
@@ -43,10 +43,10 @@ evaluation_0:
         mean_db_score: '0.3873157933415626'
         mean_fpsd_score_probsort: '0.23438179560325223'
         mean_fpsd_score_similsort: '0.23438179560325223'
-        percentage_of_BART_wins_probsort: '0.7026298044504383'
-        percentage_of_BART_wins_similsort: '0.7026298044504383'
-        percentage_of_ties_probsort: '0.13940447883025162'
-        percentage_of_ties_similsort: '0.13940447883025162'
+        rate_of_BART_wins_probsort: '0.7026298044504383'
+        rate_of_BART_wins_similsort: '0.7026298044504383'
+        rate_of_ties_probsort: '0.13940447883025162'
+        rate_of_ties_similsort: '0.13940447883025162'
         ties:
             mean_tie_simils_probsort: '0.7323792139609245'
             mean_tie_simils_similsort: '0.7323792139609245'
@@ -54,8 +54,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '1702'
             num_of_ties_simils_equal_to_1_similsort: '1702'
             num_of_ties_similsort: '3928'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.4332993890020367'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.4332993890020367'
+            rate_of_ties_simils_equal_to_1_probsort: '0.4332993890020367'
+            rate_of_ties_simils_equal_to_1_similsort: '0.4332993890020367'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -74,10 +74,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '17664'
         num_correct_formulas_at_best_prob: '17664'
         num_correct_formulas_at_best_simil: '17664'
-        percentage_of_all_correct_formulas: '0.6364946670510233'
-        percentage_of_at_least_one_correct_formula: '0.6268942754729034'
-        percentage_of_correct_formulas_at_best_prob: '0.6268942754729034'
-        percentage_of_correct_formulas_at_best_simil: '0.6268942754729034'
+        rate_of_all_correct_formulas: '0.6364946670510233'
+        rate_of_at_least_one_correct_formula: '0.6268942754729034'
+        rate_of_correct_formulas_at_best_prob: '0.6268942754729034'
+        rate_of_correct_formulas_at_best_simil: '0.6268942754729034'
     hit_at_k_prob: '[(1, 0.3865209213188061)]'
     labels_path: data/nist/valid_with_db_index.jsonl
     num_datapoints_tested: '28177'
@@ -86,22 +86,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '10488'
         num_precise_preds_similsort: '10488'
-        percentage_of_precise_preds_probsort: '0.3722184760620364'
-        percentage_of_precise_preds_similsort: '0.3722184760620364'
+        rate_of_precise_preds_probsort: '0.3722184760620364'
+        rate_of_precise_preds_similsort: '0.3722184760620364'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 10891)])
         num_1_hits_as_first_probsort: '10891'
         num_1_hits_as_first_similsort: '10891'
         num_fp_simil_fail_prob: '403'
         num_fp_simil_fail_simil: '403'
-        percentage_of_1_hits_as_first_probsort: '0.3865209213188061'
-        percentage_of_1_hits_as_first_similsort: '0.3865209213188061'
+        rate_of_1_hits_as_first_probsort: '0.3865209213188061'
+        rate_of_1_hits_as_first_similsort: '0.3865209213188061'
     start_time_utc: 04/10/2024 09:24:53
     threshold_stats:
         num_better_than_threshold_probsort: '11169'
         num_better_than_threshold_similsort: '11169'
-        percentage_of_better_than_threshold_probsort: '0.39638712425027506'
-        percentage_of_better_than_threshold_similsort: '0.39638712425027506'
+        rate_of_better_than_threshold_probsort: '0.39638712425027506'
+        rate_of_better_than_threshold_similsort: '0.39638712425027506'
         threshold: '0.85'
     topk_probsort: '[0.6216975889448149]'
     topk_similsort: '[0.6216975889448149]'
@@ -111,10 +111,10 @@ evaluation_1:
         mean_db_score: '0.3873157933415626'
         mean_fpsd_score_probsort: '0.23438179560325223'
         mean_fpsd_score_similsort: '0.23438179560325223'
-        percentage_of_BART_wins_probsort: '0.7026298044504383'
-        percentage_of_BART_wins_similsort: '0.7026298044504383'
-        percentage_of_ties_probsort: '0.13940447883025162'
-        percentage_of_ties_similsort: '0.13940447883025162'
+        rate_of_BART_wins_probsort: '0.7026298044504383'
+        rate_of_BART_wins_similsort: '0.7026298044504383'
+        rate_of_ties_probsort: '0.13940447883025162'
+        rate_of_ties_similsort: '0.13940447883025162'
         ties:
             mean_tie_simils_probsort: '0.7323792139609245'
             mean_tie_simils_similsort: '0.7323792139609245'
@@ -122,8 +122,8 @@ evaluation_1:
             num_of_ties_simils_equal_to_1_probsort: '1702'
             num_of_ties_simils_equal_to_1_similsort: '1702'
             num_of_ties_similsort: '3928'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.4332993890020367'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.4332993890020367'
+            rate_of_ties_simils_equal_to_1_probsort: '0.4332993890020367'
+            rate_of_ties_simils_equal_to_1_similsort: '0.4332993890020367'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -142,10 +142,10 @@ evaluation_1:
         num_at_least_one_correct_formula: '17664'
         num_correct_formulas_at_best_prob: '17664'
         num_correct_formulas_at_best_simil: '17664'
-        percentage_of_all_correct_formulas: '0.6364946670510233'
-        percentage_of_at_least_one_correct_formula: '0.6268942754729034'
-        percentage_of_correct_formulas_at_best_prob: '0.6268942754729034'
-        percentage_of_correct_formulas_at_best_simil: '0.6268942754729034'
+        rate_of_all_correct_formulas: '0.6364946670510233'
+        rate_of_at_least_one_correct_formula: '0.6268942754729034'
+        rate_of_correct_formulas_at_best_prob: '0.6268942754729034'
+        rate_of_correct_formulas_at_best_simil: '0.6268942754729034'
     hit_at_k_prob: '[(1, 0.3865209213188061)]'
     labels_path: data/nist/valid_with_db_index.jsonl
     num_datapoints_tested: '28177'
@@ -154,22 +154,22 @@ evaluation_1:
     precise_preds_stats:
         num_precise_preds_probsort: '10488'
         num_precise_preds_similsort: '10488'
-        percentage_of_precise_preds_probsort: '0.3722184760620364'
-        percentage_of_precise_preds_similsort: '0.3722184760620364'
+        rate_of_precise_preds_probsort: '0.3722184760620364'
+        rate_of_precise_preds_similsort: '0.3722184760620364'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 10891)])
         num_1_hits_as_first_probsort: '10891'
         num_1_hits_as_first_similsort: '10891'
         num_fp_simil_fail_prob: '403'
         num_fp_simil_fail_simil: '403'
-        percentage_of_1_hits_as_first_probsort: '0.3865209213188061'
-        percentage_of_1_hits_as_first_similsort: '0.3865209213188061'
+        rate_of_1_hits_as_first_probsort: '0.3865209213188061'
+        rate_of_1_hits_as_first_similsort: '0.3865209213188061'
     start_time_utc: 04/10/2024 09:27:19
     threshold_stats:
         num_better_than_threshold_probsort: '11169'
         num_better_than_threshold_similsort: '11169'
-        percentage_of_better_than_threshold_probsort: '0.39638712425027506'
-        percentage_of_better_than_threshold_similsort: '0.39638712425027506'
+        rate_of_better_than_threshold_probsort: '0.39638712425027506'
+        rate_of_better_than_threshold_similsort: '0.39638712425027506'
         threshold: '0.85'
     topk_probsort: '[0.6216975889448149]'
     topk_similsort: '[0.6216975889448149]'
