--- a/clean_paper/predictions/jolly-lion-562_exp6_45perc_frozen/NIST/1728025474_valid_full_greedy/log_file.yaml
+++ b/clean_paper/predictions/jolly-lion-562_exp6_45perc_frozen/NIST/1728025474_valid_full_greedy/log_file.yaml
@@ -43,10 +43,10 @@ evaluation_0:
         mean_db_score: '0.3873157933415626'
         mean_fpsd_score_probsort: '0.20680754302058532'
         mean_fpsd_score_similsort: '0.20680754302058532'
-        percentage_of_BART_wins_probsort: '0.6786740958938141'
-        percentage_of_BART_wins_similsort: '0.6786740958938141'
-        percentage_of_ties_probsort: '0.13546509564538453'
-        percentage_of_ties_similsort: '0.13546509564538453'
+        rate_of_BART_wins_probsort: '0.6786740958938141'
+        rate_of_BART_wins_similsort: '0.6786740958938141'
+        rate_of_ties_probsort: '0.13546509564538453'
+        rate_of_ties_similsort: '0.13546509564538453'
         ties:
             mean_tie_simils_probsort: '0.7324266321617889'
             mean_tie_simils_similsort: '0.7324266321617889'
@@ -54,8 +54,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '1669'
             num_of_ties_simils_equal_to_1_similsort: '1669'
             num_of_ties_similsort: '3817'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.4372543882630338'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.4372543882630338'
+            rate_of_ties_simils_equal_to_1_probsort: '0.4372543882630338'
+            rate_of_ties_simils_equal_to_1_similsort: '0.4372543882630338'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -74,10 +74,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '16946'
         num_correct_formulas_at_best_prob: '16946'
         num_correct_formulas_at_best_simil: '16946'
-        percentage_of_all_correct_formulas: '0.6136742232201058'
-        percentage_of_at_least_one_correct_formula: '0.6014124995563758'
-        percentage_of_correct_formulas_at_best_prob: '0.6014124995563758'
-        percentage_of_correct_formulas_at_best_simil: '0.6014124995563758'
+        rate_of_all_correct_formulas: '0.6136742232201058'
+        rate_of_at_least_one_correct_formula: '0.6014124995563758'
+        rate_of_correct_formulas_at_best_prob: '0.6014124995563758'
+        rate_of_correct_formulas_at_best_simil: '0.6014124995563758'
     hit_at_k_prob: '[(1, 0.3511019625936047)]'
     labels_path: data/nist/valid_with_db_index.jsonl
     num_datapoints_tested: '28177'
@@ -86,22 +86,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '9423'
         num_precise_preds_similsort: '9423'
-        percentage_of_precise_preds_probsort: '0.3344216914504738'
-        percentage_of_precise_preds_similsort: '0.3344216914504738'
+        rate_of_precise_preds_probsort: '0.3344216914504738'
+        rate_of_precise_preds_similsort: '0.3344216914504738'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 9893)])
         num_1_hits_as_first_probsort: '9893'
         num_1_hits_as_first_similsort: '9893'
         num_fp_simil_fail_prob: '470'
         num_fp_simil_fail_simil: '470'
-        percentage_of_1_hits_as_first_probsort: '0.3511019625936047'
-        percentage_of_1_hits_as_first_similsort: '0.3511019625936047'
+        rate_of_1_hits_as_first_probsort: '0.3511019625936047'
+        rate_of_1_hits_as_first_similsort: '0.3511019625936047'
     start_time_utc: 06/10/2024 23:57:15
     threshold_stats:
         num_better_than_threshold_probsort: '10187'
         num_better_than_threshold_similsort: '10187'
-        percentage_of_better_than_threshold_probsort: '0.3615360045427121'
-        percentage_of_better_than_threshold_similsort: '0.3615360045427121'
+        rate_of_better_than_threshold_probsort: '0.3615360045427121'
+        rate_of_better_than_threshold_similsort: '0.3615360045427121'
         threshold: '0.85'
     topk_probsort: '[0.5941233363621479]'
     topk_similsort: '[0.5941233363621479]'
