--- a/clean_paper/predictions/major-capybara-531_exp1_pos_emb/NIST/1727968160_valid_full_greedy/log_file.yaml
+++ b/clean_paper/predictions/major-capybara-531_exp1_pos_emb/NIST/1727968160_valid_full_greedy/log_file.yaml
@@ -43,10 +43,10 @@ evaluation_0:
         mean_db_score: '0.3873157933415626'
         mean_fpsd_score_probsort: '-0.023335395252045244'
         mean_fpsd_score_similsort: '-0.023335395252045244'
-        percentage_of_BART_wins_probsort: '0.4292508073961032'
-        percentage_of_BART_wins_similsort: '0.4292508073961032'
-        percentage_of_ties_probsort: '0.09514852539305108'
-        percentage_of_ties_similsort: '0.09514852539305108'
+        rate_of_BART_wins_probsort: '0.4292508073961032'
+        rate_of_BART_wins_similsort: '0.4292508073961032'
+        rate_of_ties_probsort: '0.09514852539305108'
+        rate_of_ties_similsort: '0.09514852539305108'
         ties:
             mean_tie_simils_probsort: '0.74101138453054'
             mean_tie_simils_similsort: '0.74101138453054'
@@ -54,8 +54,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '1191'
             num_of_ties_simils_equal_to_1_similsort: '1191'
             num_of_ties_similsort: '2681'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.4442372249160761'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.4442372249160761'
+            rate_of_ties_simils_equal_to_1_probsort: '0.4442372249160761'
+            rate_of_ties_simils_equal_to_1_similsort: '0.4442372249160761'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -74,10 +74,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '7853'
         num_correct_formulas_at_best_prob: '7853'
         num_correct_formulas_at_best_simil: '7853'
-        percentage_of_all_correct_formulas: '0.2853768442474017'
-        percentage_of_at_least_one_correct_formula: '0.27870248784469603'
-        percentage_of_correct_formulas_at_best_prob: '0.27870248784469603'
-        percentage_of_correct_formulas_at_best_simil: '0.27870248784469603'
+        rate_of_all_correct_formulas: '0.2853768442474017'
+        rate_of_at_least_one_correct_formula: '0.27870248784469603'
+        rate_of_correct_formulas_at_best_prob: '0.27870248784469603'
+        rate_of_correct_formulas_at_best_simil: '0.27870248784469603'
     hit_at_k_prob: '[(1, 0.11672640806331405)]'
     labels_path: data/nist/valid_with_db_index.jsonl
     num_datapoints_tested: '28177'
@@ -86,22 +86,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '2642'
         num_precise_preds_similsort: '2642'
-        percentage_of_precise_preds_probsort: '0.09376441778755723'
-        percentage_of_precise_preds_similsort: '0.09376441778755723'
+        rate_of_precise_preds_probsort: '0.09376441778755723'
+        rate_of_precise_preds_similsort: '0.09376441778755723'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 3289)])
         num_1_hits_as_first_probsort: '3289'
         num_1_hits_as_first_similsort: '3289'
         num_fp_simil_fail_prob: '647'
         num_fp_simil_fail_simil: '647'
-        percentage_of_1_hits_as_first_probsort: '0.11672640806331405'
-        percentage_of_1_hits_as_first_similsort: '0.11672640806331405'
+        rate_of_1_hits_as_first_probsort: '0.11672640806331405'
+        rate_of_1_hits_as_first_similsort: '0.11672640806331405'
     start_time_utc: 04/10/2024 09:24:53
     threshold_stats:
         num_better_than_threshold_probsort: '3608'
         num_better_than_threshold_similsort: '3608'
-        percentage_of_better_than_threshold_probsort: '0.12804769847748163'
-        percentage_of_better_than_threshold_similsort: '0.12804769847748163'
+        rate_of_better_than_threshold_probsort: '0.12804769847748163'
+        rate_of_better_than_threshold_similsort: '0.12804769847748163'
         threshold: '0.85'
     topk_probsort: '[0.3639803980895174]'
     topk_similsort: '[0.3639803980895174]'
@@ -111,10 +111,10 @@ evaluation_1:
         mean_db_score: '0.3873157933415626'
         mean_fpsd_score_probsort: '-0.023335395252045244'
         mean_fpsd_score_similsort: '-0.023335395252045244'
-        percentage_of_BART_wins_probsort: '0.4292508073961032'
-        percentage_of_BART_wins_similsort: '0.4292508073961032'
-        percentage_of_ties_probsort: '0.09514852539305108'
-        percentage_of_ties_similsort: '0.09514852539305108'
+        rate_of_BART_wins_probsort: '0.4292508073961032'
+        rate_of_BART_wins_similsort: '0.4292508073961032'
+        rate_of_ties_probsort: '0.09514852539305108'
+        rate_of_ties_similsort: '0.09514852539305108'
         ties:
             mean_tie_simils_probsort: '0.74101138453054'
             mean_tie_simils_similsort: '0.74101138453054'
@@ -122,8 +122,8 @@ evaluation_1:
             num_of_ties_simils_equal_to_1_probsort: '1191'
             num_of_ties_simils_equal_to_1_similsort: '1191'
             num_of_ties_similsort: '2681'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.4442372249160761'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.4442372249160761'
+            rate_of_ties_simils_equal_to_1_probsort: '0.4442372249160761'
+            rate_of_ties_simils_equal_to_1_similsort: '0.4442372249160761'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -142,10 +142,10 @@ evaluation_1:
         num_at_least_one_correct_formula: '7853'
         num_correct_formulas_at_best_prob: '7853'
         num_correct_formulas_at_best_simil: '7853'
-        percentage_of_all_correct_formulas: '0.2853768442474017'
-        percentage_of_at_least_one_correct_formula: '0.27870248784469603'
-        percentage_of_correct_formulas_at_best_prob: '0.27870248784469603'
-        percentage_of_correct_formulas_at_best_simil: '0.27870248784469603'
+        rate_of_all_correct_formulas: '0.2853768442474017'
+        rate_of_at_least_one_correct_formula: '0.27870248784469603'
+        rate_of_correct_formulas_at_best_prob: '0.27870248784469603'
+        rate_of_correct_formulas_at_best_simil: '0.27870248784469603'
     hit_at_k_prob: '[(1, 0.11672640806331405)]'
     labels_path: data/nist/valid_with_db_index.jsonl
     num_datapoints_tested: '28177'
@@ -154,22 +154,22 @@ evaluation_1:
     precise_preds_stats:
         num_precise_preds_probsort: '2642'
         num_precise_preds_similsort: '2642'
-        percentage_of_precise_preds_probsort: '0.09376441778755723'
-        percentage_of_precise_preds_similsort: '0.09376441778755723'
+        rate_of_precise_preds_probsort: '0.09376441778755723'
+        rate_of_precise_preds_similsort: '0.09376441778755723'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 3289)])
         num_1_hits_as_first_probsort: '3289'
         num_1_hits_as_first_similsort: '3289'
         num_fp_simil_fail_prob: '647'
         num_fp_simil_fail_simil: '647'
-        percentage_of_1_hits_as_first_probsort: '0.11672640806331405'
-        percentage_of_1_hits_as_first_similsort: '0.11672640806331405'
+        rate_of_1_hits_as_first_probsort: '0.11672640806331405'
+        rate_of_1_hits_as_first_similsort: '0.11672640806331405'
     start_time_utc: 04/10/2024 09:27:19
     threshold_stats:
         num_better_than_threshold_probsort: '3608'
         num_better_than_threshold_similsort: '3608'
-        percentage_of_better_than_threshold_probsort: '0.12804769847748163'
-        percentage_of_better_than_threshold_similsort: '0.12804769847748163'
+        rate_of_better_than_threshold_probsort: '0.12804769847748163'
+        rate_of_better_than_threshold_similsort: '0.12804769847748163'
         threshold: '0.85'
     topk_probsort: '[0.3639803980895174]'
     topk_similsort: '[0.3639803980895174]'
