--- a/clean_paper/predictions/valiant-totem-557_exp4_neims/NIST/1727959179_valid_full_greedy/log_file.yaml
+++ b/clean_paper/predictions/valiant-totem-557_exp4_neims/NIST/1727959179_valid_full_greedy/log_file.yaml
@@ -43,10 +43,10 @@ evaluation_0:
         mean_db_score: '0.3873157933415626'
         mean_fpsd_score_probsort: '0.22982698174066887'
         mean_fpsd_score_similsort: '0.22982698174066887'
-        percentage_of_BART_wins_probsort: '0.6998260993008482'
-        percentage_of_BART_wins_similsort: '0.6998260993008482'
-        percentage_of_ties_probsort: '0.1420307342868297'
-        percentage_of_ties_similsort: '0.1420307342868297'
+        rate_of_BART_wins_probsort: '0.6998260993008482'
+        rate_of_BART_wins_similsort: '0.6998260993008482'
+        rate_of_ties_probsort: '0.1420307342868297'
+        rate_of_ties_similsort: '0.1420307342868297'
         ties:
             mean_tie_simils_probsort: '0.7242001546541826'
             mean_tie_simils_similsort: '0.7242001546541826'
@@ -54,8 +54,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '1686'
             num_of_ties_simils_equal_to_1_similsort: '1686'
             num_of_ties_similsort: '4002'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.42128935532233885'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.42128935532233885'
+            rate_of_ties_simils_equal_to_1_probsort: '0.42128935532233885'
+            rate_of_ties_simils_equal_to_1_similsort: '0.42128935532233885'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -74,10 +74,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '17541'
         num_correct_formulas_at_best_prob: '17541'
         num_correct_formulas_at_best_simil: '17541'
-        percentage_of_all_correct_formulas: '0.631789367526293'
-        percentage_of_at_least_one_correct_formula: '0.6225290130248075'
-        percentage_of_correct_formulas_at_best_prob: '0.6225290130248075'
-        percentage_of_correct_formulas_at_best_simil: '0.6225290130248075'
+        rate_of_all_correct_formulas: '0.631789367526293'
+        rate_of_at_least_one_correct_formula: '0.6225290130248075'
+        rate_of_correct_formulas_at_best_prob: '0.6225290130248075'
+        rate_of_correct_formulas_at_best_simil: '0.6225290130248075'
     hit_at_k_prob: '[(1, 0.37874862476487914)]'
     labels_path: data/nist/valid_with_db_index.jsonl
     num_datapoints_tested: '28177'
@@ -86,22 +86,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '10263'
         num_precise_preds_similsort: '10263'
-        percentage_of_precise_preds_probsort: '0.36423323987649503'
-        percentage_of_precise_preds_similsort: '0.36423323987649503'
+        rate_of_precise_preds_probsort: '0.36423323987649503'
+        rate_of_precise_preds_similsort: '0.36423323987649503'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 10672)])
         num_1_hits_as_first_probsort: '10672'
         num_1_hits_as_first_similsort: '10672'
         num_fp_simil_fail_prob: '409'
         num_fp_simil_fail_simil: '409'
-        percentage_of_1_hits_as_first_probsort: '0.37874862476487914'
-        percentage_of_1_hits_as_first_similsort: '0.37874862476487914'
+        rate_of_1_hits_as_first_probsort: '0.37874862476487914'
+        rate_of_1_hits_as_first_similsort: '0.37874862476487914'
     start_time_utc: 04/10/2024 09:24:53
     threshold_stats:
         num_better_than_threshold_probsort: '10943'
         num_better_than_threshold_similsort: '10943'
-        percentage_of_better_than_threshold_probsort: '0.3883663981261312'
-        percentage_of_better_than_threshold_similsort: '0.3883663981261312'
+        rate_of_better_than_threshold_probsort: '0.3883663981261312'
+        rate_of_better_than_threshold_similsort: '0.3883663981261312'
         threshold: '0.85'
     topk_probsort: '[0.6171427750822315]'
     topk_similsort: '[0.6171427750822315]'
@@ -111,10 +111,10 @@ evaluation_1:
         mean_db_score: '0.3873157933415626'
         mean_fpsd_score_probsort: '0.22982698174066887'
         mean_fpsd_score_similsort: '0.22982698174066887'
-        percentage_of_BART_wins_probsort: '0.6998260993008482'
-        percentage_of_BART_wins_similsort: '0.6998260993008482'
-        percentage_of_ties_probsort: '0.1420307342868297'
-        percentage_of_ties_similsort: '0.1420307342868297'
+        rate_of_BART_wins_probsort: '0.6998260993008482'
+        rate_of_BART_wins_similsort: '0.6998260993008482'
+        rate_of_ties_probsort: '0.1420307342868297'
+        rate_of_ties_similsort: '0.1420307342868297'
         ties:
             mean_tie_simils_probsort: '0.7242001546541826'
             mean_tie_simils_similsort: '0.7242001546541826'
@@ -122,8 +122,8 @@ evaluation_1:
             num_of_ties_simils_equal_to_1_probsort: '1686'
             num_of_ties_simils_equal_to_1_similsort: '1686'
             num_of_ties_similsort: '4002'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.42128935532233885'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.42128935532233885'
+            rate_of_ties_simils_equal_to_1_probsort: '0.42128935532233885'
+            rate_of_ties_simils_equal_to_1_similsort: '0.42128935532233885'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -142,10 +142,10 @@ evaluation_1:
         num_at_least_one_correct_formula: '17541'
         num_correct_formulas_at_best_prob: '17541'
         num_correct_formulas_at_best_simil: '17541'
-        percentage_of_all_correct_formulas: '0.631789367526293'
-        percentage_of_at_least_one_correct_formula: '0.6225290130248075'
-        percentage_of_correct_formulas_at_best_prob: '0.6225290130248075'
-        percentage_of_correct_formulas_at_best_simil: '0.6225290130248075'
+        rate_of_all_correct_formulas: '0.631789367526293'
+        rate_of_at_least_one_correct_formula: '0.6225290130248075'
+        rate_of_correct_formulas_at_best_prob: '0.6225290130248075'
+        rate_of_correct_formulas_at_best_simil: '0.6225290130248075'
     hit_at_k_prob: '[(1, 0.37874862476487914)]'
     labels_path: data/nist/valid_with_db_index.jsonl
     num_datapoints_tested: '28177'
@@ -154,22 +154,22 @@ evaluation_1:
     precise_preds_stats:
         num_precise_preds_probsort: '10263'
         num_precise_preds_similsort: '10263'
-        percentage_of_precise_preds_probsort: '0.36423323987649503'
-        percentage_of_precise_preds_similsort: '0.36423323987649503'
+        rate_of_precise_preds_probsort: '0.36423323987649503'
+        rate_of_precise_preds_similsort: '0.36423323987649503'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 10672)])
         num_1_hits_as_first_probsort: '10672'
         num_1_hits_as_first_similsort: '10672'
         num_fp_simil_fail_prob: '409'
         num_fp_simil_fail_simil: '409'
-        percentage_of_1_hits_as_first_probsort: '0.37874862476487914'
-        percentage_of_1_hits_as_first_similsort: '0.37874862476487914'
+        rate_of_1_hits_as_first_probsort: '0.37874862476487914'
+        rate_of_1_hits_as_first_similsort: '0.37874862476487914'
     start_time_utc: 04/10/2024 09:27:19
     threshold_stats:
         num_better_than_threshold_probsort: '10943'
         num_better_than_threshold_similsort: '10943'
-        percentage_of_better_than_threshold_probsort: '0.3883663981261312'
-        percentage_of_better_than_threshold_similsort: '0.3883663981261312'
+        rate_of_better_than_threshold_probsort: '0.3883663981261312'
+        rate_of_better_than_threshold_similsort: '0.3883663981261312'
         threshold: '0.85'
     topk_probsort: '[0.6171427750822315]'
     topk_similsort: '[0.6171427750822315]'
