--- a/predictions/fearless-wildflower-490_rassp1_neims1_224kPretrain_148k/Cayman/1726519724_test_full_greedy/log_file.yaml
+++ b/predictions/fearless-wildflower-490_rassp1_neims1_224kPretrain_148k/Cayman/1726519724_test_full_greedy/log_file.yaml
@@ -44,10 +44,10 @@ evaluation_0:
         mean_db_score: '0.3162541157129898'
         mean_fpsd_score_probsort: '0.25132009687716406'
         mean_fpsd_score_similsort: '0.25132009687716406'
-        percentage_of_BART_wins_probsort: '0.7601078167115903'
-        percentage_of_BART_wins_similsort: '0.7601078167115903'
-        percentage_of_ties_probsort: '0.0431266846361186'
-        percentage_of_ties_similsort: '0.0431266846361186'
+        rate_of_BART_wins_probsort: '0.7601078167115903'
+        rate_of_BART_wins_similsort: '0.7601078167115903'
+        rate_of_ties_probsort: '0.0431266846361186'
+        rate_of_ties_similsort: '0.0431266846361186'
         ties:
             mean_tie_simils_probsort: '0.6501769372273349'
             mean_tie_simils_similsort: '0.6501769372273349'
@@ -55,8 +55,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '0'
             num_of_ties_simils_equal_to_1_similsort: '0'
             num_of_ties_similsort: '16'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.0'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.0'
+            rate_of_ties_simils_equal_to_1_probsort: '0.0'
+            rate_of_ties_simils_equal_to_1_similsort: '0.0'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -75,10 +75,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '137'
         num_correct_formulas_at_best_prob: '137'
         num_correct_formulas_at_best_simil: '137'
-        percentage_of_all_correct_formulas: '0.3774104683195592'
-        percentage_of_at_least_one_correct_formula: '0.3692722371967655'
-        percentage_of_correct_formulas_at_best_prob: '0.3692722371967655'
-        percentage_of_correct_formulas_at_best_simil: '0.3692722371967655'
+        rate_of_all_correct_formulas: '0.3774104683195592'
+        rate_of_at_least_one_correct_formula: '0.3692722371967655'
+        rate_of_correct_formulas_at_best_prob: '0.3692722371967655'
+        rate_of_correct_formulas_at_best_simil: '0.3692722371967655'
     hit_at_k_prob: '[(1, 0.18328840970350405)]'
     labels_path: ../data/datasets/extra_libraries/Cayman_library/Cayman_library_with_db_index.jsonl
     num_datapoints_tested: '371'
@@ -87,22 +87,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '68'
         num_precise_preds_similsort: '68'
-        percentage_of_precise_preds_probsort: '0.18328840970350405'
-        percentage_of_precise_preds_similsort: '0.18328840970350405'
+        rate_of_precise_preds_probsort: '0.18328840970350405'
+        rate_of_precise_preds_similsort: '0.18328840970350405'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 68)])
         num_1_hits_as_first_probsort: '68'
         num_1_hits_as_first_similsort: '68'
         num_fp_simil_fail_prob: '0'
         num_fp_simil_fail_simil: '0'
-        percentage_of_1_hits_as_first_probsort: '0.18328840970350405'
-        percentage_of_1_hits_as_first_similsort: '0.18328840970350405'
+        rate_of_1_hits_as_first_probsort: '0.18328840970350405'
+        rate_of_1_hits_as_first_similsort: '0.18328840970350405'
     start_time_utc: 16/09/2024 23:04:52
     threshold_stats:
         num_better_than_threshold_probsort: '78'
         num_better_than_threshold_similsort: '78'
-        percentage_of_better_than_threshold_probsort: '0.21024258760107817'
-        percentage_of_better_than_threshold_similsort: '0.21024258760107817'
+        rate_of_better_than_threshold_probsort: '0.21024258760107817'
+        rate_of_better_than_threshold_similsort: '0.21024258760107817'
         threshold: '0.85'
     topk_probsort: '[0.5675742125901537]'
     topk_similsort: '[0.5675742125901537]'
