--- a/predictions/fearless-wildflower-490_rassp1_neims1_224kPretrain_148k/Cayman/1726520556_test_full_beam10/log_file.yaml
+++ b/predictions/fearless-wildflower-490_rassp1_neims1_224kPretrain_148k/Cayman/1726520556_test_full_beam10/log_file.yaml
@@ -44,10 +44,10 @@ evaluation_0:
         mean_db_score: '0.3162541157129898'
         mean_fpsd_score_probsort: '0.26184489007842654'
         mean_fpsd_score_similsort: '0.38006603359925223'
-        percentage_of_BART_wins_probsort: '0.7762803234501348'
-        percentage_of_BART_wins_similsort: '0.8679245283018868'
-        percentage_of_ties_probsort: '0.018867924528301886'
-        percentage_of_ties_similsort: '0.018867924528301886'
+        rate_of_BART_wins_probsort: '0.7762803234501348'
+        rate_of_BART_wins_similsort: '0.8679245283018868'
+        rate_of_ties_probsort: '0.018867924528301886'
+        rate_of_ties_similsort: '0.018867924528301886'
         ties:
             mean_tie_simils_probsort: '0.686665880120164'
             mean_tie_simils_similsort: '0.728107047603878'
@@ -55,8 +55,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '0'
             num_of_ties_simils_equal_to_1_similsort: '0'
             num_of_ties_similsort: '7'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.0'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.0'
+            rate_of_ties_simils_equal_to_1_probsort: '0.0'
+            rate_of_ties_simils_equal_to_1_similsort: '0.0'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -75,10 +75,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '206'
         num_correct_formulas_at_best_prob: '138'
         num_correct_formulas_at_best_simil: '156'
-        percentage_of_all_correct_formulas: '0.17502951593860686'
-        percentage_of_at_least_one_correct_formula: '0.555256064690027'
-        percentage_of_correct_formulas_at_best_prob: '0.3719676549865229'
-        percentage_of_correct_formulas_at_best_simil: '0.42048517520215634'
+        rate_of_all_correct_formulas: '0.17502951593860686'
+        rate_of_at_least_one_correct_formula: '0.555256064690027'
+        rate_of_correct_formulas_at_best_prob: '0.3719676549865229'
+        rate_of_correct_formulas_at_best_simil: '0.42048517520215634'
     hit_at_k_prob: '[(1, 0.1778975741239892), (2, 0.21024258760107817), (3, 0.2587601078167116),
         (4, 0.2776280323450135), (5, 0.29110512129380056), (6, 0.30727762803234504),
         (7, 0.31536388140161725), (8, 0.31805929919137466), (10, 0.32075471698113206)]'
@@ -89,22 +89,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '66'
         num_precise_preds_similsort: '116'
-        percentage_of_precise_preds_probsort: '0.1778975741239892'
-        percentage_of_precise_preds_similsort: '0.31266846361185985'
+        rate_of_precise_preds_probsort: '0.1778975741239892'
+        rate_of_precise_preds_similsort: '0.31266846361185985'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 116), (2, 2), (3, 1)])
         num_1_hits_as_first_probsort: '66'
         num_1_hits_as_first_similsort: '119'
         num_fp_simil_fail_prob: '0'
         num_fp_simil_fail_simil: '3'
-        percentage_of_1_hits_as_first_probsort: '0.1778975741239892'
-        percentage_of_1_hits_as_first_similsort: '0.32075471698113206'
+        rate_of_1_hits_as_first_probsort: '0.1778975741239892'
+        rate_of_1_hits_as_first_similsort: '0.32075471698113206'
     start_time_utc: 16/09/2024 23:14:17
     threshold_stats:
         num_better_than_threshold_probsort: '76'
         num_better_than_threshold_similsort: '136'
-        percentage_of_better_than_threshold_probsort: '0.20485175202156333'
-        percentage_of_better_than_threshold_similsort: '0.3665768194070081'
+        rate_of_better_than_threshold_probsort: '0.20485175202156333'
+        rate_of_better_than_threshold_similsort: '0.3665768194070081'
         threshold: '0.85'
     topk_probsort: '[0.5780990057914164, 0.5094172783739565, 0.4954629801556937, 0.4702139750000615,
         0.4570971607195812, 0.45118063284354876, 0.44154184051849527, 0.421278169551958,
