--- a/predictions/fearless-wildflower-490_rassp1_neims1_224kPretrain_148k/SWGDRUG/1726432120_test_full_greedy/log_file.yaml
+++ b/predictions/fearless-wildflower-490_rassp1_neims1_224kPretrain_148k/SWGDRUG/1726432120_test_full_greedy/log_file.yaml
@@ -44,10 +44,10 @@ evaluation_0:
         mean_db_score: '0.33473974870290424'
         mean_fpsd_score_probsort: '0.30650316263348254'
         mean_fpsd_score_similsort: '0.30650316263348254'
-        percentage_of_BART_wins_probsort: '0.8116169544740973'
-        percentage_of_BART_wins_similsort: '0.8116169544740973'
-        percentage_of_ties_probsort: '0.011773940345368918'
-        percentage_of_ties_similsort: '0.011773940345368918'
+        rate_of_BART_wins_probsort: '0.8116169544740973'
+        rate_of_BART_wins_similsort: '0.8116169544740973'
+        rate_of_ties_probsort: '0.011773940345368918'
+        rate_of_ties_similsort: '0.011773940345368918'
         ties:
             mean_tie_simils_probsort: '0.5102083333333334'
             mean_tie_simils_similsort: '0.5102083333333334'
@@ -55,8 +55,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '0'
             num_of_ties_simils_equal_to_1_similsort: '0'
             num_of_ties_similsort: '15'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.0'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.0'
+            rate_of_ties_simils_equal_to_1_probsort: '0.0'
+            rate_of_ties_simils_equal_to_1_similsort: '0.0'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -75,10 +75,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '694'
         num_correct_formulas_at_best_prob: '694'
         num_correct_formulas_at_best_simil: '694'
-        percentage_of_all_correct_formulas: '0.551231135822081'
-        percentage_of_at_least_one_correct_formula: '0.5447409733124019'
-        percentage_of_correct_formulas_at_best_prob: '0.5447409733124019'
-        percentage_of_correct_formulas_at_best_simil: '0.5447409733124019'
+        rate_of_all_correct_formulas: '0.551231135822081'
+        rate_of_at_least_one_correct_formula: '0.5447409733124019'
+        rate_of_correct_formulas_at_best_prob: '0.5447409733124019'
+        rate_of_correct_formulas_at_best_simil: '0.5447409733124019'
     hit_at_k_prob: '[(1, 0.27864992150706436)]'
     labels_path: ../data/datasets/extra_libraries/SWGDRUG_3/SWGDRUG_3_with_db_index.jsonl
     num_datapoints_tested: '1274'
@@ -87,22 +87,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '354'
         num_precise_preds_similsort: '354'
-        percentage_of_precise_preds_probsort: '0.2778649921507064'
-        percentage_of_precise_preds_similsort: '0.2778649921507064'
+        rate_of_precise_preds_probsort: '0.2778649921507064'
+        rate_of_precise_preds_similsort: '0.2778649921507064'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 355)])
         num_1_hits_as_first_probsort: '355'
         num_1_hits_as_first_similsort: '355'
         num_fp_simil_fail_prob: '1'
         num_fp_simil_fail_simil: '1'
-        percentage_of_1_hits_as_first_probsort: '0.27864992150706436'
-        percentage_of_1_hits_as_first_similsort: '0.27864992150706436'
+        rate_of_1_hits_as_first_probsort: '0.27864992150706436'
+        rate_of_1_hits_as_first_similsort: '0.27864992150706436'
     start_time_utc: 15/09/2024 23:29:34
     threshold_stats:
         num_better_than_threshold_probsort: '380'
         num_better_than_threshold_similsort: '380'
-        percentage_of_better_than_threshold_probsort: '0.29827315541601257'
-        percentage_of_better_than_threshold_similsort: '0.29827315541601257'
+        rate_of_better_than_threshold_probsort: '0.29827315541601257'
+        rate_of_better_than_threshold_similsort: '0.29827315541601257'
         threshold: '0.85'
     topk_probsort: '[0.6412429113363868]'
     topk_similsort: '[0.6412429113363868]'
