--- a/predictions/fearless-wildflower-490_rassp1_neims1_224kPretrain_148k/SWGDRUG/1726433172_test_full_beam10/log_file.yaml
+++ b/predictions/fearless-wildflower-490_rassp1_neims1_224kPretrain_148k/SWGDRUG/1726433172_test_full_beam10/log_file.yaml
@@ -44,10 +44,10 @@ evaluation_0:
         mean_db_score: '0.33473974870290424'
         mean_fpsd_score_probsort: '0.311421475460143'
         mean_fpsd_score_similsort: '0.45003042026738366'
-        percentage_of_BART_wins_probsort: '0.8241758241758241'
-        percentage_of_BART_wins_similsort: '0.9293563579277865'
-        percentage_of_ties_probsort: '0.0031397174254317113'
-        percentage_of_ties_similsort: '0.0031397174254317113'
+        rate_of_BART_wins_probsort: '0.8241758241758241'
+        rate_of_BART_wins_similsort: '0.9293563579277865'
+        rate_of_ties_probsort: '0.0031397174254317113'
+        rate_of_ties_similsort: '0.0031397174254317113'
         ties:
             mean_tie_simils_probsort: '0.5933189655172414'
             mean_tie_simils_similsort: '0.65625'
@@ -55,8 +55,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '0'
             num_of_ties_simils_equal_to_1_similsort: '0'
             num_of_ties_similsort: '4'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.0'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.0'
+            rate_of_ties_simils_equal_to_1_probsort: '0.0'
+            rate_of_ties_simils_equal_to_1_similsort: '0.0'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -75,10 +75,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '977'
         num_correct_formulas_at_best_prob: '691'
         num_correct_formulas_at_best_simil: '807'
-        percentage_of_all_correct_formulas: '0.23761500353857043'
-        percentage_of_at_least_one_correct_formula: '0.7668759811616954'
-        percentage_of_correct_formulas_at_best_prob: '0.542386185243328'
-        percentage_of_correct_formulas_at_best_simil: '0.6334379905808477'
+        rate_of_all_correct_formulas: '0.23761500353857043'
+        rate_of_at_least_one_correct_formula: '0.7668759811616954'
+        rate_of_correct_formulas_at_best_prob: '0.542386185243328'
+        rate_of_correct_formulas_at_best_simil: '0.6334379905808477'
     hit_at_k_prob: '[(1, 0.2739403453689168), (2, 0.3673469387755102), (3, 0.3979591836734694),
         (4, 0.4230769230769231), (5, 0.44819466248037676), (6, 0.46075353218210363),
         (7, 0.4725274725274725), (8, 0.4811616954474097), (9, 0.48822605965463106)]'
@@ -90,22 +90,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '349'
         num_precise_preds_similsort: '620'
-        percentage_of_precise_preds_probsort: '0.2739403453689168'
-        percentage_of_precise_preds_similsort: '0.48665620094191525'
+        rate_of_precise_preds_probsort: '0.2739403453689168'
+        rate_of_precise_preds_similsort: '0.48665620094191525'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 615), (2, 7)])
         num_1_hits_as_first_probsort: '349'
         num_1_hits_as_first_similsort: '622'
         num_fp_simil_fail_prob: '0'
         num_fp_simil_fail_simil: '2'
-        percentage_of_1_hits_as_first_probsort: '0.2739403453689168'
-        percentage_of_1_hits_as_first_similsort: '0.48822605965463106'
+        rate_of_1_hits_as_first_probsort: '0.2739403453689168'
+        rate_of_1_hits_as_first_similsort: '0.48822605965463106'
     start_time_utc: 15/09/2024 23:31:59
     threshold_stats:
         num_better_than_threshold_probsort: '369'
         num_better_than_threshold_similsort: '649'
-        percentage_of_better_than_threshold_probsort: '0.28963893249607536'
-        percentage_of_better_than_threshold_similsort: '0.5094191522762951'
+        rate_of_better_than_threshold_probsort: '0.28963893249607536'
+        rate_of_better_than_threshold_similsort: '0.5094191522762951'
         threshold: '0.85'
     topk_probsort: '[0.6461612241630472, 0.5514937675065423, 0.511446906421445, 0.4955390333161026,
         0.4795520645001298, 0.4696068521723494, 0.4586957277198083, 0.44815950292973666,
