--- a/predictions/fearless-wildflower-490_rassp1_neims1_224kPretrain_148k/SWGDRUG/1726499003_noD_full_greedy/log_file.yaml
+++ b/predictions/fearless-wildflower-490_rassp1_neims1_224kPretrain_148k/SWGDRUG/1726499003_noD_full_greedy/log_file.yaml
@@ -44,10 +44,10 @@ evaluation_0:
         mean_db_score: '0.33855409079993504'
         mean_fpsd_score_probsort: '0.3089277976495887'
         mean_fpsd_score_similsort: '0.3089277976495887'
-        percentage_of_BART_wins_probsort: '0.7639000805801772'
-        percentage_of_BART_wins_similsort: '0.7639000805801772'
-        percentage_of_ties_probsort: '0.09024979854955681'
-        percentage_of_ties_similsort: '0.09024979854955681'
+        rate_of_BART_wins_probsort: '0.7639000805801772'
+        rate_of_BART_wins_similsort: '0.7639000805801772'
+        rate_of_ties_probsort: '0.09024979854955681'
+        rate_of_ties_similsort: '0.09024979854955681'
         ties:
             mean_tie_simils_probsort: '0.57673131780526'
             mean_tie_simils_similsort: '0.57673131780526'
@@ -55,8 +55,8 @@ evaluation_0:
             num_of_ties_simils_equal_to_1_probsort: '0'
             num_of_ties_simils_equal_to_1_similsort: '0'
             num_of_ties_similsort: '112'
-            percentage_of_ties_simils_equal_to_1_probsort: '0.0'
-            percentage_of_ties_simils_equal_to_1_similsort: '0.0'
+            rate_of_ties_simils_equal_to_1_probsort: '0.0'
+            rate_of_ties_simils_equal_to_1_similsort: '0.0'
     eval_config:
         do_db_search: true
         filtering_args:
@@ -75,10 +75,10 @@ evaluation_0:
         num_at_least_one_correct_formula: '691'
         num_correct_formulas_at_best_prob: '691'
         num_correct_formulas_at_best_simil: '691'
-        percentage_of_all_correct_formulas: '0.5627035830618893'
-        percentage_of_at_least_one_correct_formula: '0.556809024979855'
-        percentage_of_correct_formulas_at_best_prob: '0.556809024979855'
-        percentage_of_correct_formulas_at_best_simil: '0.556809024979855'
+        rate_of_all_correct_formulas: '0.5627035830618893'
+        rate_of_at_least_one_correct_formula: '0.556809024979855'
+        rate_of_correct_formulas_at_best_prob: '0.556809024979855'
+        rate_of_correct_formulas_at_best_simil: '0.556809024979855'
     hit_at_k_prob: '[(1, 0.2852538275584206)]'
     labels_path: ../data/datasets/extra_libraries/SWGDRUG_3/SWGDRUG_3_noD_with_db_index.jsonl
     num_datapoints_tested: '1241'
@@ -87,22 +87,22 @@ evaluation_0:
     precise_preds_stats:
         num_precise_preds_probsort: '353'
         num_precise_preds_similsort: '353'
-        percentage_of_precise_preds_probsort: '0.28444802578565676'
-        percentage_of_precise_preds_similsort: '0.28444802578565676'
+        rate_of_precise_preds_probsort: '0.28444802578565676'
+        rate_of_precise_preds_similsort: '0.28444802578565676'
     simil_1_hits:
         counter_multiple_hits: dict_items([(1, 354)])
         num_1_hits_as_first_probsort: '354'
         num_1_hits_as_first_similsort: '354'
         num_fp_simil_fail_prob: '1'
         num_fp_simil_fail_simil: '1'
-        percentage_of_1_hits_as_first_probsort: '0.2852538275584206'
-        percentage_of_1_hits_as_first_similsort: '0.2852538275584206'
+        rate_of_1_hits_as_first_probsort: '0.2852538275584206'
+        rate_of_1_hits_as_first_similsort: '0.2852538275584206'
     start_time_utc: 16/09/2024 17:39:25
     threshold_stats:
         num_better_than_threshold_probsort: '378'
         num_better_than_threshold_similsort: '378'
-        percentage_of_better_than_threshold_probsort: '0.3045930701047542'
-        percentage_of_better_than_threshold_similsort: '0.3045930701047542'
+        rate_of_better_than_threshold_probsort: '0.3045930701047542'
+        rate_of_better_than_threshold_similsort: '0.3045930701047542'
         threshold: '0.85'
     topk_probsort: '[0.6474818884495238]'
     topk_similsort: '[0.6474818884495238]'
